--- a/404.html
+++ b/404.html
@@ -26,17 +26,17 @@
 
 </head>
 
-<body class="easein single" id="dark">
+<body class="easein lang single" id="dark">
 
   <section>
     <article>
       <div class="quote text-center">
         <h1>404</h1>
-        <p>Not found.<font class="fr">&nbsp;&#92;&nbsp;Pas trouv&eacute;.</font></p>
+        <p><font class="en">Not found.</font><font class="fr">&nbsp;&#92;&nbsp;Pas trouvé.</font></p>
 
-        <h3 class="linebreak">We should have taken that left turn at Albuquerque.<font class="fr">&nbsp;&#92;&nbsp;Nous aurions d&ucirc; prendre ce virage &agrave; gauche &agrave; Albuquerque.</font></h3>
+        <h3 class="linebreak"><font class="en">We should have taken that left turn at Albuquerque.</font><font class="fr">&nbsp;&#92;&nbsp;Nous aurions dû prendre ce virage à gauche à Albuquerque.</font></h3>
 
-        <p class="linebreak">Official website of <a href="//animathabitat.org" title="Animat Habitat">Animat Habitat</a>.<font class="fr">&nbsp;&#92;&nbsp;Site officiel.</font></p>
+        <p class="linebreak"><font class="en">Official website of <a href="//animathabitat.org" title="Animat Habitat">Animat Habitat</a>.</font><font class="fr">&nbsp;&#92;&nbsp;Site officiel.</font></p>
 
       </div>
 
@@ -45,9 +45,9 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Address any feedback to the development office at Animat Habitat [<a href="mailto:feedback@animathabitat.org" title="Address feedback for Animat Habitat." target="_blank">feedback&nbsp;:&nbsp;animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Envoyez-nous vos commentaires.</font></p>
+      <p class="small"><font class="en">Address any feedback to the development office at Animat Habitat [<a href="mailto:feedback@animathabitat.org" title="Animat Habitat development office, bureau de développement." target="_blank">feedback&nbsp;:&nbsp;animathabitat.org</a>].</font><font class="fr">&nbsp;&#92;&nbsp;Adressez tout commentaire au bureau de développement chez Animat Habitat.</font></p>
 
-      <p class="linebreak small">Animat Habitat <a href="//animathabitat.org/index/" title="Animat Habitat official website index.">Site Index</a>.<font class="fr">&nbsp;&#92;&nbsp;Index du site Web.</font></p>
+      <p class="linebreak small">Animat Habitat <a href="//animathabitat.org/index/" title="Animat Habitat official website index, index du site officiel."><font class="en">Site Index</font></a>.<font class="fr">&nbsp;&#92;&nbsp;Index du site Web.</font></p>
 
     </div>
 
