--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,8 @@
   <nav>
     <ul class="page">
       <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
       <li class="crumb active"><a><i>App</i></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
     </ul>
   </nav>
 
@@ -41,9 +41,9 @@
       <div class="clear" id="feedback" spellcheck="false">
 
         <div>
-          <h3 class="letterhead">Beta App Feedback Form<font class="fr"><br>Formulaire de commentaires sur l'application b&ecirc;ta</font></h3>
+          <h3 class="letterhead"><font class="en">Beta App Feedback Form</font><font class="fr">Formulaire de commentaires sur l'application bêta</font></h3>
 
-          <p class="linebreak">We welcome your feedback in our first beta program, beginning in April 2025.<font class="fr">&nbsp;&#92;&nbsp;Nous comptons sur votre commentaires lors de notre premier programme b&ecirc;ta, qui d&eacute;butera en avril 2025.</font></p>
+          <p class="linebreak"><font class="en">We welcome your feedback in our first beta program, beginning in April 2028.</font><font class="fr">Nous comptons sur votre commentaires lors de notre premier programme bêta, qui débutera en avril 2028.</font></p>
 
         </div>
       </div>
@@ -65,12 +65,12 @@
   function toggle_language() {
     if ( toggle_lang == 0 ) {
       r.style.setProperty('--fr', "inline");
-      r.style.setProperty('--fr-en', "none");
+      r.style.setProperty('--en', "none");
       toggle_lang = 1;
     }
     else {
       r.style.setProperty('--fr', "none");
-      r.style.setProperty('--fr-en', "inline");
+      r.style.setProperty('--en', "inline");
       toggle_lang = 0;
     }
   };
