--- a/boutique/medium/digital-numerique/index.html
+++ b/boutique/medium/digital-numerique/index.html
@@ -7,11 +7,11 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="Art of wild animals to help protect their ecosystems and the biodiversity that cascades from their presence.&nbsp;&#92;&nbsp;L'art des animaux sauvages pour prot&eacute;ger leurs &eacute;cosyst&egrave;mes et la biodiversit&eacute; qui profite de leur pr&eacute;sence." />
+  <meta name="description" content="Art of wild animals to help protect their ecosystems and the biodiversity that cascades from their presence.&nbsp;&#92;&nbsp;L'art des animaux sauvages pour protéger leurs écosystèmes et la biodiversité qui profite de leur présence." />
   <meta name="keywords" content="wildlife digital art, wildlife digital painting, wildlife desktop background, wildlife wallpaper, digital art shop" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat boutique. Digital editions, &Eacute;ditions num&eacute;riques.</title>
+  <title>Animat Habitat boutique. Digital editions, Éditions numériques.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -26,8 +26,8 @@
     <ul class="page">
       <li class="crumb logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb"><a href="../../" title="Animat Habitat boutique.">Boutique</a></li>
-      <li class="crumb active"><a><i>Digital</i></a></li>
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="crumb active"><a><i><font class="en">Digital</font><font class="fr">Numérique</font></i></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
     </ul>
   </nav>
 
@@ -35,7 +35,7 @@
 
     <div class="quote text-center">
       <h1 class="title"><a href="../../" title="Animat Habitat boutique."><font class="color-reset">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></a></h1>
-      <h3>Digital Editions<font class="fr">&nbsp;&#92;&nbsp;&Eacute;ditions num&eacute;riques</font></h3>
+      <h3><font class="en">Digital Editions</font><font class="fr">Éditions numériques</font></h3>
 
     </div>
 
@@ -45,7 +45,7 @@
     <article>
 
       <div class="term-description">
-        <p>Digital editions are delivered as a full resolution copy of the original artwork as well as a bundle of common screen sizes appropriate to the composition of the original artwork. Seventy (70) per cent of the purchase price is redirected to wildlife conservation projects in association with scenes at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Les &eacute;ditions num&eacute;riques sont livr&eacute;es sous la forme d'une copie pleine r&eacute;solution de l'&#156;uvre originale ainsi que d'un ensemble de tailles d'écran courantes des &eacute;crans adapt&eacute;es &agrave; la composition de l'&#156;uvre originale. Soixante-dix pour cent du prix d'achat est redirig&eacute; aux projets de conservation de la nature en association avec les sc&egrave;nes chez Animat Habitat.</font></p>
+        <p><font class="en">Digital editions are delivered as a full resolution copy of the original artwork as well as a bundle of common screen sizes appropriate to the composition of the original artwork. Seventy (70) per cent of the purchase price is redirected to wildlife conservation projects in association with scenes at Animat Habitat.</font><font class="fr">Les éditions numériques sont livrées sous la forme d'une copie pleine résolution de l'&#156;uvre originale ainsi que d'un ensemble de tailles d'écran courantes des écrans adaptées à la composition de l'&#156;uvre originale. Soixante-dix pour cent du prix d'achat est redirigé aux projets de conservation de la nature en association avec les scènes chez Animat Habitat.</font></p>
       </div>
 
     </article><br class="clear">
@@ -65,7 +65,7 @@
           </a>
 
           <a href="last-of-the-big-tuskers/"><h5 class="product-title">Magnificent Seven</h5></a>
-          <h5 class="product-description">Collection of<font class="fr">&nbsp;&#92;&nbsp;de</font> 7</h5>
+          <h5 class="product-description">Collection <font class="en">of</font><font class="fr">de</font> 7</h5>
           <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
 
         </li>
@@ -80,7 +80,7 @@
   <footer>
     <div class="quote">
       <!-- <div class="clear small">
-        <p>All included dimensions.<font class="fr">&nbsp;&#92;&nbsp;Toutes les dimensions incluses.</font></p>
+        <p><font class="en">ll included dimensions.</font><font class="fr">Toutes les dimensions incluses.</font></p>
 
         <p class="linebreak">Ultra HD: 3840&nbsp;&times;&nbsp;2160 px</p>
         <p>QHD: 2560&nbsp;&times;&nbsp;1440 px</p>
@@ -92,7 +92,7 @@
         <p>iPhone SE: 640&nbsp;&times;&nbsp;1136 px</p>
       </div> -->
 
-      <p class="linebreak small">Copyright &copy; 2018-2025 Animat Habitat. <a href="../../../c/" target="_blank" title="Animat Habitat &frasl; Terms of Access">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'access.</font></p>
+      <p class="linebreak small">Copyright &copy; 2018-2025 Animat Habitat. <a href="../../../c/" target="_blank" title="Animat Habitat terms of access."><font class="en">Terms of Access</font><font class="fr">Conditions d'access</font></a>.</p>
 
     </div>
 
@@ -110,12 +110,12 @@
   function toggle_language() {
     if ( toggle_lang == 0 ) {
       r.style.setProperty('--fr', "inline");
-      r.style.setProperty('--fr-en', "none");
+      r.style.setProperty('--en', "none");
       toggle_lang = 1;
     }
     else {
       r.style.setProperty('--fr', "none");
-      r.style.setProperty('--fr-en', "inline");
+      r.style.setProperty('--en', "inline");
       toggle_lang = 0;
     }
   };
