--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
   <nav>
     <ul class="home">
       <li class="crumb logo"><a title="Animat Habitat"><img src="inc/svg/animat.mark.1.1.1200.dark.svg" class="logo" alt="Animat Mark (Dark) &copy; Animat Habitat, 2015" /></a></li>
-      <li class="crumb btn color-one"><a href="scene/one/" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">I</a></li>
-      <!-- <li class="crumb btn color-two"><a href="scene/two/" title="Animat Habitat scene two. &verbar;&nbsp;sc&egrave;ne deux.">II</a></li> -->
-      <!-- <li class="crumb btn color-three"><a href="scene/three/" title="Animat Habitat scene three. &verbar;&nbsp;sc&egrave;ne trois.">III</a></li> -->
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="crumb btn color-one"><a href="scene/one/" title="Animat Habitat scene one, sc&egrave;ne un.">I</a></li>
+      <!-- <li class="crumb btn color-two"><a href="scene/two/" title="Animat Habitat scene two, sc&egrave;ne deux.">II</a></li> -->
+      <!-- <li class="crumb btn color-three"><a href="scene/three/" title="Animat Habitat scene three, sc&egrave;ne trois.">III</a></li> -->
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
       <li class="right btn"><a href="patron/" title="Animat Habitat patrons.">Patron</a></li>
       <li class="right btn"><a href="boutique/" title="Animat Habitat boutique.">Boutique</a></li>
     </ul>
@@ -53,7 +53,7 @@
   <header>
     <div class="quote text-center">
       <h1 class="title"><font class="color-reset">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></h1>
-      <h3>Art for the conservation of endangered species and their natural habitats.<font class="fr"> <br>Art pour la conservation des esp&egrave;ces en p&eacute;ril et de leurs habitats naturels.</font></h3>
+      <h3><font class="en">Art for the conservation of endangered species and their natural habitats.</font><font class="fr">Art pour la conservation des esp&egrave;ces en p&eacute;ril et de leurs habitats naturels.</font></h3>
 
     </div>
 
@@ -68,8 +68,8 @@
           <a class="project-thumbnail" href="url/git/bigtuskers/" target="_blank" title="Last of the Big Tuskers (2018)">
             <img src="inc/img/last-of-the-big-tuskers/lotbt.poster.art.480-233.jpg" width="480" height="233" alt="Last of the Big Tuskers (documentary film, 2018) poster art." />
             <div class="bg-one">
-              <h3><font class="color-one">Last of the Big Tuskers (2018)</font></h3>
-              <p>A film by James Currie&mdash;a documentary about the challenges to save the last of the big tuskers in Tembe Elephant Park, South Africa.<font class="fr">&nbsp;&#92;&nbsp;Un film de James Currie &mdash; un documentaire sur les d&eacute;fis pour conserver les derniers des &eacute;l&eacute;phants &agrave; grosse d&eacute;fense &agrave; Tembe, Afrique du Sud.</font></p>
+              <h3><font class="color-one">Last of the Big Tuskers (<font class="fr">&nbsp;</font>2018<font class="fr">&nbsp;</font>)</font></h3>
+              <p><font class="en">A film by James Currie&mdash;a documentary about the challenges to save the last of the big tuskers in Tembe Elephant Park, South Africa.</font><font class="fr">Un film de James Currie &mdash; un documentaire sur les d&eacute;fis pour conserver les derniers des &eacute;l&eacute;phants &agrave; grosse d&eacute;fense &agrave; Tembe, Afrique du Sud.</font></p>
             </div>
 
           </a>
@@ -77,11 +77,11 @@
         </div>
 
         <div>
-          <a class="project-thumbnail" href="scene/one/" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">
+          <a class="project-thumbnail" href="scene/one/" title="Animat Habitat scene one, sc&egrave;ne un.">
             <img src="inc/img/01/we.cover.banner.480-160.jpg" width="480" height="160" alt="Animat Habitat scene one: White Elephant cover art, 2024." />
             <div class="bg-one">
               <h3><font class="color-one">I&nbsp; White Elephant (&ndash;)</font></h3>
-              <p>Journey with an elephant across a sea of sand&mdash;a comic book, a companion app and an invitation to change the way we look at wildlife.<font class="fr">&nbsp;&#92;&nbsp;Voyageons avec un &eacute;l&eacute;phant &agrave; travers une mer de sable &mdash; une bande dessin&eacute;e, une application compagnon et une invitation &agrave; changer la fa&ccedil;on dont nous regardons la nature.</font></p>
+              <p><font class="en">Journey with an elephant across a sea of sand&mdash;a comic book, a companion app and an invitation to change the way we look at wildlife.</font><font class="fr">Voyageons avec un &eacute;l&eacute;phant &agrave; travers une mer de sable &mdash; une bande dessin&eacute;e, une application compagnon et une invitation &agrave; changer la façon dont nous regardons la nature.</font></p>
             </div>
 
           </a>
@@ -95,7 +95,10 @@
   <div class="clear color">
     <section class="single">
       <div class="quote text-center">
-        <h4>Animat<font class="thin">&mdash;<i>verb</i> in 3sg., indicative present, from the Latin</font> anim&amacr;re <font class="text-quote">&ldquo;</font><font class="thin">to&nbsp;animate</font><font class="text-quote">&rdquo;</font><font class="thin">,</font> <font class="text-quote">&ldquo;</font><font class="thin">to&nbsp;give&nbsp;life&nbsp;to</font><font class="text-quote">&rdquo;</font><font class="thin">.</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;<i>verbe</i> en 3&nbsp;sg., pr&egrave;sent de l'indicatif, du Latin</font> anim&amacr;re &laquo;&nbsp;<font class="thin">animer</font>&nbsp;&raquo;&nbsp;<font class="thin">,</font> &laquo;&nbsp;<font class="thin">donner la vie</font>&nbsp;&raquo;&nbsp;<font class="thin">.</font></font></h4>
+        <h4>
+          <font class="en">Animat<font class="thin">&mdash;<i>verb</i> in third person singular, indicative present, from the Latin</font> anim&amacr;re <font class="text-quote">&ldquo;</font><font class="thin">to&nbsp;animate</font><font class="text-quote">&rdquo;</font><font class="thin">,</font> <font class="text-quote">&ldquo;</font><font class="thin">to&nbsp;give&nbsp;life&nbsp;to</font><font class="text-quote">&rdquo;</font><font class="thin">.</font></font>
+          <font class="fr">Animat<font class="thin">&mdash;<i>verbe</i> en troisième personne du singulier, pr&egrave;sent de l'indicatif, du Latin</font> anim&amacr;re &laquo;&nbsp;<font class="thin">animer</font>&nbsp;&raquo;&nbsp;<font class="thin">,</font> &laquo;&nbsp;<font class="thin">donner la vie</font>&nbsp;&raquo;&nbsp;<font class="thin">.</font></font>
+        </h4>
 
         <!-- anim&otilde; -->
 
@@ -108,37 +111,37 @@
       <div class="quote ptych-right">
 
         <p><a href="canon/" title="Animat Habitat boutique.">Boutique</a></p>
-        <p class="lineend small">Art shop at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Boutique d'art chez Animat Habitat.</font></p>
+        <p class="lineend small"><font class="en">Art shop at Animat Habitat.</font><font class="fr">Boutique d'art chez Animat Habitat.</font></p>
 
         <pre class="thin"></pre>
 
         <p class="linebreak"><a href="canon/" title="Animat Habitat canon.">Canon</a></p>
-        <p class="lineend small">Visual identity and mission statement.<font class="fr">&nbsp;&#92;&nbsp;Identit&eacute; visuelle et &eacute;nonc&eacute; de mission.</font></p>
+        <p class="lineend small"><font class="en">Visual identity and mission statement.</font><font class="fr">Identit&eacute; visuelle et &eacute;nonc&eacute; de mission.</font></p>
 
         <pre class="thin"></pre>
 
         <p class="linebreak"><a href="champion/" title="Animat Habitat champions.">Champion</a></p>
-        <p class="lineend small">Habitat conservation champions.<font class="fr">&nbsp;&#92;&nbsp;Champions de conservation de la nature.</font></p>
+        <p class="lineend small"><font class="en">Habitat conservation champions.</font><font class="fr">Champions de conservation de la nature.</font></p>
 
         <pre class="thin"></pre>
 
         <p class="linebreak"><a href="conservation/" title="Animat Habitat conservation.">Conservation</a></p>
-        <p class="lineend small">Habitat conservation projects.<font class="fr">&nbsp;&#92;&nbsp;Les projets de conservation de la nature.</font></p>
+        <p class="lineend small"><font class="en">Habitat conservation projects.</font><font class="fr">Les projets de conservation de la nature.</font></p>
 
         <pre class="thin"></pre>
 
-        <p class="linebreak"><a href="patron/" title="Animat Habitat patrons.">Donation</a><font class="fr">&nbsp;&#92;&nbsp;Don</font></p>
-        <p class="lineend small">Patrons of the scenes in wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Patrons des sc&egrave;nes d'art de la nature.</font></p>
+        <p class="linebreak"><a href="patron/" title="Animat Habitat patrons."><font class="en">Donation</font><font class="fr">Don</font></a></p>
+        <p class="lineend small"><font class="en">Patrons of the scenes in wildlife art.</font><font class="fr">Patrons des sc&egrave;nes d'art de la nature.</font></p>
 
         <pre class="thin"></pre>
 
       </div>
 
       <div class="quote ptych-left">
-        <!-- <p>Follow what's happening @<a href="url/x/animathabitat/" title="X / Animat Habitat" target="_blank" rel="noopener">animathabitat</a>, @<a href="https://mstdn.ca/@animathabitat/" title="Mastodon / Animat Habitat" target="_blank" rel="me">animathabitat&ndash;mstdn.ca</a>.<font class="fr">&nbsp;&#92;&nbsp;Suivez ce qui se passe chez Animat Habitat.</font></p> -->
+        <!-- <p><font class="en">Follow what's happening</font> @<a href="url/x/animathabitat/" title="X / Animat Habitat" target="_blank" rel="noopener">animathabitat</a>, @<a href="https://mstdn.ca/@animathabitat/" title="Mastodon / Animat Habitat" target="_blank" rel="me">animathabitat&ndash;mstdn.ca</a>.<font class="fr">Suivez ce qui se passe chez Animat Habitat.</font></p> -->
 
-        <h5>Behind the scenes in wildlife art&hellip;<font class="fr">&nbsp;&#92;&nbsp;Dans les coulisses d'art de la nature&hellip;</font></h5>
-        <p>Register your name and address to get behind the scenes art Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Enregistrez votre nom et votre adresse pour entrer dans les coulisses chez Animat Habitat.</font></p>
+        <h5><font class="en">Behind the scenes in wildlife art&hellip;</font><font class="fr">Dans les coulisses d'art de la nature&hellip;</font></h5>
+        <p><font class="en">Register your name and address to get behind the scenes art Animat Habitat.</font><font class="fr">Enregistrez votre nom et votre adresse pour entrer dans les coulisses chez Animat Habitat.</font></p>
 
         <form class="js-cm-form" id="subForm" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="92D4C54F0FEC16E5ADC2B1904DE9ED1A52FB6D182F7A8A669AB1C317E182AD3763A1B775C7C4E900069B5F6BE1E4B7A7B42258404945BDA2B8796E1BC8516FAF">
 
@@ -148,7 +151,7 @@
 
           <div class="gutter-tobo clear-top">
             <input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email matte-thin" id="fieldEmail" maxlength="140" name="cm-dliyu-dliyu" required="" type="email" placeholder="E-mail address&nbsp;&#92;&nbsp;Addresse e-mail" onfocus="if (this.value == 'E-mail address&nbsp;&#92;&nbsp;Addresse e-mail') this.value = ''" title="E-mail address required. &#92;&nbsp;Adresse e-mail requis.">
-            <button type="submit">Register<font class="fr">&nbsp;&#92;&nbsp;Enregistrez</font></button>
+            <button type="submit"><font class="en">Register</font><font class="fr">Enregistrez</font></button>
 
           </div>
 
@@ -156,15 +159,15 @@
 
         <pre class="thin"></pre>
 
-        <p class="linebreak small">Animat Habitat official website designed and developed by <a href="url/git/danealeksander/" title="Dane Aleksander, graphic artist.">Dane Aleksander</a> with the open-source WordPress and Automattic WooCommerce information architecture, with Google Fonts: <i>Oswald</i> [Extra-Light, Medium], and then archived with GitHub pages. Protected areas of this website not served on GitHub are hosted in Canada and powered by renewable energy.<font class="fr">&nbsp;&#92;&nbsp;Animat Habitat site officiel con&ccedil;u et d&eacute;velopp&eacute; par Dane Aleksander avec l'architecture d'information WordPress et WooCommerce, avec Google Fonts, et puis archiv&eacute; avec les pages GitHub. Les zones prot&eacute;g&eacute;es de ce site Web non desservies sur GitHub sont h&eacute;berg&eacute;es au Canada et aliment&eacute;es par des &eacute;nergies renouvelables.</font></p>
+        <p class="linebreak small"><font class="en">Animat Habitat official website designed and developed by <a href="url/git/danealeksander/" title="Dane Aleksander, graphic artist.">Dane Aleksander</a> with the open-source WordPress and Automattic WooCommerce information architecture, with Google Fonts: <i>Oswald</i> [Extra-Light, Medium], and then archived with GitHub pages. Protected areas of this website not served on GitHub are hosted in Canada and powered by renewable energy.</font><font class="fr">Animat Habitat site officiel conçu et d&eacute;velopp&eacute; par <a href="url/git/danealeksander/" title="Dane Aleksander, graphic artist.">Dane Aleksander</a> avec l'architecture d'information WordPress et WooCommerce, avec Google Fonts&nbsp;: <i>Oswald</i>, et puis archiv&eacute; avec les pages GitHub. Les zones prot&eacute;g&eacute;es de ce site Web non desservies sur GitHub sont h&eacute;berg&eacute;es au Canada et aliment&eacute;es par des &eacute;nergies renouvelables.</font></p>
 
-        <p class="linebreak small">Animat Habitat <a href="index/" title="Animat Habitat official website index.">Site Index</a>.<font class="fr">&nbsp;&#92;&nbsp;Index du site Web.</font></p>
+        <p class="linebreak small">Animat Habitat <a href="index/" title="Animat Habitat official website index, index du site officiel."><font class="en">Site Index</font><font class="fr">Index du site Web.</font></a></p>
 
-        <p class="linebreak small">Incorporated in Canada as not-for-profit organization #942675-2. &ldquo;Animat Habitat&rdquo; is an unregistered trademark that is protected for the purpose of corporate identity. Documents of the organization are archived and classified in the Animat Habitat <a href="s/" title="Animat Habitat member handbook.">Member Handbook</a>.<font class="fr">&nbsp;&#92;&nbsp;Incorpor&eacute;e au Canada comme organisation &agrave; but non lucratif &mdash; le nom de l'organisation est une marque non enregistr&eacute;e qui est prot&eacute;g&eacute;e aux fins de l'identit&eacute; corporatif. Les documents d'organisation sont archiv&eacute;s et class&eacute;s dans le manuel des membres.</font></p>
+        <p class="linebreak small"><font class="en">Incorporated in Canada as not-for-profit organization #942675-2. &ldquo;Animat Habitat&rdquo; is an unregistered trademark that is protected for the purpose of corporate identity. Documents of the organization are archived and classified in the Animat Habitat <a href="s/" title="Animat Habitat member handbook, manuel des membres.">Member Handbook</a>.</font><font class="fr">Incorpor&eacute;e au Canada comme organisation &agrave; but non lucratif #&nbsp;942675-2. &laquo;&nbsp;Animat Habitat&nbsp;&raquo; est une marque non enregistr&eacute;e qui est prot&eacute;g&eacute;e aux fins de l'identit&eacute; corporatif. Les documents d'organisation sont archiv&eacute;s et class&eacute;s dans le <a href="s/" title="Animat Habitat member handbook, manuel des membres.">manuel des membres</a> chez Animat Habitat.</font></p>
 
-        <p class="linebreak small">Thank you for visiting.<font class="fr">&nbsp;&#92;&nbsp;Merci pour votre visite.</font></p>
+        <p class="linebreak small"><font class="en">Thank you for visiting.</font><font class="fr">Merci pour votre visite.</font></p>
 
-        <p class="linebreak small">Copyright &copy; 2015-2025 Animat Habitat. <a href="c/" target="_blank" title="Animat Habitat terms of access.">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'acc&egrave;s.</font></p>
+        <p class="linebreak small">Copyright &copy; 2015-2025 Animat Habitat. <a href="c/" target="_blank" title="Animat Habitat terms of access."><font class="en">Terms of Access</font><font class="fr">Conditions d'acc&egrave;s</font></a>.</p>
 
       </div>
     </div>
@@ -179,7 +182,6 @@
       toggle_lang = 0;
 
   r.style.setProperty('--fr', "none");
-  // r.style.setProperty('--fr-en', "display-inline");
 
   document.onload = load_createsend();
 
@@ -195,12 +197,12 @@
   function toggle_language() {
     if ( toggle_lang == 0 ) {
       r.style.setProperty('--fr', "inline");
-      r.style.setProperty('--fr-en', "none");
+      r.style.setProperty('--en', "none");
       toggle_lang = 1;
     }
     else {
       r.style.setProperty('--fr', "none");
-      r.style.setProperty('--fr-en', "inline");
+      r.style.setProperty('--en', "inline");
       toggle_lang = 0;
     }
   };
