--- a/index/index.html
+++ b/index/index.html
@@ -6,7 +6,7 @@
   <meta name="google" content="notranslate" />
 
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="Animat Habitat official website index.&nbsp;&#92;&nbsp;Index du site Web officiel Animat Habitat." />
+  <meta name="description" content="Animat Habitat official website index, index du site officiel." />
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -25,7 +25,7 @@
     <ul class="page">
       <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb active"><a><i>Index</i></a></li>
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
     </ul>
   </nav>
 
@@ -34,7 +34,7 @@
 
       <div>
         <h4 class="letterhead thin">Animat Habitat</h4>
-        <h2>Site Index<font class="fr">&nbsp;&#92;&nbsp;du site Web</font></h2>
+        <h2><font class="en">Site Index</font><font class="fr">Index du site Web</font></h2>
         <h5>animathabitat.ca &middot; animathabitat.com &middot; animathabitat.org</h5>
 
       </div>
@@ -46,46 +46,46 @@
         <p>Animat Habitat <a href="../patron/" title="Animat Habitat patrons.">Patron</a></p>
 
         <h5 class="linebreak title"><font class="color-one">I&nbsp; White Elephant</font></h5>
-        <p>Animat Habitat <a href="../scene/one/" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">Scene One</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un</font></p>
-        <p>Animat Habitat Scene One &ndash; <a href="../scene/one/making-of-ella/" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un. Making of Ella, 1.">Making of Ella</a> &hellip;</p>
+        <p>Animat Habitat <a href="../scene/one/" title="Animat Habitat scene one, scène un."><font class="en">Scene One</font><font class="fr">Scène un</font></a></p>
+        <p>Animat Habitat <font class="en">Scene Two</font><font class="fr">Scène un</font> &ndash; <a href="../scene/one/making-of-ella/" title="Animat Habitat scene one, scène un. Making of Ella, 1.">Making of Ella</a> &hellip;</p>
 
         <h5 class="linebreak title"><font class="color-two">II&nbsp; White Tiger</font></h5>
-        <p>Animat Habitat <a href="../scene/two/" title="Animat Habitat scene two. &verbar;&nbsp;sc&egrave;ne deux.">Scene Two</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux</font></p>
-        <p>Animat Habitat Scene Two &ndash; <a href="../scene/two/the-beginning-of-painting/" title="Animat Habitat scene two. &verbar;&nbsp;sc&egrave;ne deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
+        <p>Animat Habitat <a href="../scene/two/" title="Animat Habitat scene two, scène deux."><font class="en">Scene Two</font><font class="fr">Scène deux</font></a></p>
+        <p>Animat Habitat <font class="en">Scene Two</font><font class="fr">Scène deux</font> &ndash; <a href="../scene/two/the-beginning-of-painting/" title="Animat Habitat scene two, scène deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
 
         <h5 class="linebreak title"><font class="color-three">III&nbsp; White Bear</font></h5>
-        <p>Animat Habitat <a href="../scene/three/" title="Animat Habitat scene three. &verbar;&nbsp;sc&egrave;ne trois.">Scene Three</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne trois</font></p>
-        <p>Animat Habitat Scene Three &ndash; <a href="../scene/three/history-of-whales-anatomy/" title="Animat Habitat scene two. &verbar;&nbsp;sc&egrave;ne deux. A History of Whales, Anatomy.">A History of Whales</a> &hellip;</p>
+        <p>Animat Habitat <a href="../scene/three/" title="Animat Habitat scene three, scène trois."><font class="en">Scene Three</font><font class="fr">Scène trois</font></a></p>
+        <p>Animat Habitat <font class="en">Scene Two</font><font class="fr">Scène trois</font> &ndash; <a href="../scene/three/history-of-whales-anatomy/" title="Animat Habitat scene two, scène deux. A History of Whales, Anatomy.">A History of Whales</a> &hellip;</p>
 
         <h5 class="letterhead title">Boutique</h5>
         <p>Animat Habitat <a href="../boutique/" title="Animat Habitat boutique.">Boutique</a></p>
-        <p>Animat Habitat Boutique &ndash; <a href="../boutique/medium/digital-numerqiue/" title="Animat Habitat boutique. Digital editions, &Eacute;ditions num&eacute;riques.">Digital Editions</a><font class="fr">&nbsp;&#92;&nbsp;&Eacute;ditions num&eacute;riques</font></p>
-        <p>Animat Habitat Boutique &ndash; <a href="../boutique/medium/giclee/" title="Animat Habitat boutique. Gicl&eacute;e.">Glic&eacute;e Prints</a><font class="fr">&nbsp;&#92;&nbsp;Gicl&eacute;es</font></p>
-        <p>Animat Habitat Boutique &ndash; <a href="../boutique/medium/original/" title="Animat Habitat boutique. Traditional artworks, Oeuvres traditionels.">Traditional Artworks</a><font class="fr">&nbsp;&#92;&nbsp;Oeuvres traditionels</font></p>
+        <p>Animat Habitat Boutique &ndash; <a href="../boutique/medium/digital-numerqiue/" title="Animat Habitat boutique. Digital editions, Éditions numériques."><font class="en">Digital Editions</font><font class="fr">Éditions numériques</font></a></p>
+        <p>Animat Habitat Boutique &ndash; <a href="../boutique/medium/giclee/" title="Animat Habitat boutique. Giclée."><font class="en">Glicée Prints</font><font class="fr">Giclées</font></a></p>
+        <p>Animat Habitat Boutique &ndash; <a href="../boutique/medium/original/" title="Animat Habitat boutique. Traditional artworks, Oeuvres traditionels."><font class="en">Traditional Artworks</font><font class="fr">Oeuvres traditionels</font></a></p>
 
         <h5 class="letterhead title">Conservation</h5>
         <p>Animat Habitat <a href="../conservation/" title="Animat Habitat conservation.">Conservation</a></p>
-        <p>Animat Habitat &ndash; Asia<font class="fr">&nbsp;&#92;&nbsp;Asie</font></p>
-        <p>Animat Habitat &ndash; <a href="../conservation/africa-afrique/" title="Animat Habitat conservation. Africa, Afrique.">Africa</a><font class="fr">&nbsp;&#92;&nbsp;Afrique</font></p>
-        <p>Animat Habitat &ndash; North America<font class="fr">&nbsp;&#92;&nbsp;Am&egrave;rique du Nord</font></p>
-        <p>Animat Habitat &ndash; South America<font class="fr">&nbsp;&#92;&nbsp;Am&egrave;rique du Sud</font></p>
-        <p>Animat Habitat &ndash; Arctic<font class="fr">&nbsp;&#92;&nbsp;Arctique</font></p>
+        <p>Animat Habitat &ndash; <font class="en">Asia</font><font class="fr">Asie</font></p>
+        <p>Animat Habitat &ndash; <a href="../conservation/africa-afrique/" title="Animat Habitat conservation. Africa, Afrique."><font class="en">Africa</font><font class="fr">Afrique</font></a></p>
+        <p>Animat Habitat &ndash; <font class="en">North America</font><font class="fr">Amèrique du Nord</font></p>
+        <p>Animat Habitat &ndash; <font class="en">South America</font><font class="fr">Amèrique du Sud</font></p>
+        <p>Animat Habitat &ndash; <font class="en">Arctic</font><font class="fr">Arctique</font></p>
         <p>Animat Habitat &ndash; Europe</p>
-        <p>Animat Habitat &ndash; Oceania<font class="fr">&nbsp;&#92;&nbsp;Oc&eacute;anie</font></p>
+        <p>Animat Habitat &ndash; <font class="en">Oceania</font><font class="fr">Océanie</font></p>
 
-        <h5 class="letterhead title">Members<font class="fr">&nbsp;&#92;&nbsp;Membres</font></h5>
-        <p>Animat Habitat Member<font class="fr">&nbsp;&#92;&nbsp;Membre</font> &ndash; <a href="../rss/" title="Animat Habitat broadcast.">Registration</a><font class="fr">&nbsp;&#92;&nbsp;Enregistration</font></p>
+        <h5 class="letterhead title"><font class="en">Members</font><font class="fr">Membres</font></h5>
+        <p>Animat Habitat <font class="en">Member</font><font class="fr">Membre</font> &ndash; <a href="../rss/" title="Animat Habitat broadcast."><font class="en">Registration</font><font class="fr">Enregistration</font></a></p>
 
-        <h5 class="letterhead title">Terms<font class="fr">&nbsp;&#92;&nbsp;Conditions</font></h5>
-        <p>Animat Habitat <a href="../c/privacy-policy/" title="Animat Habitat privacy policy.">Privacy Policy</a><font class="fr">&nbsp;&#92;&nbsp;Politique de confidentialit&eacute;</font></p>
-        <p>Animat Habitat <a href="../c/" title="Animat Habitat terms of access.">Terms of Access</a><font class="fr">&nbsp;&#92;&nbsp;Conditions d'acc&egrave;s</font></p>
-        <p>Animat Habitat Boutique &ndash; <a href="../c/terms-of-use/" title="Animat Habitat terms of use.">Terms of Use</a><font class="fr">&nbsp;&#92;&nbsp;Conditions d'utilisation</font></p>
-        <p>Animat Habitat Boutique &ndash; <a href="../c/terms-of-purchase/" title="Animat Habitat terms of purchase.">Terms of Purchase</a><font class="fr">&nbsp;&#92;&nbsp;Conditions d'achat</font></p>
+        <h5 class="letterhead title"><font class="en">Terms</font><font class="fr">Conditions</font></h5>
+        <p>Animat Habitat <a href="../c/privacy-policy/" title="Animat Habitat privacy policy."><font class="en">Privacy Policy</font><font class="fr">Politique de confidentialité</font></a></p>
+        <p>Animat Habitat <a href="../c/" title="Animat Habitat terms of access."><font class="en">Terms of Access</font><font class="fr">Conditions d'accès</font></a></p>
+        <p>Animat Habitat Boutique &ndash; <a href="../c/terms-of-use/" title="Animat Habitat terms of use."><font class="en">Terms of Use</font><font class="fr">Conditions d'utilisation</font></a></p>
+        <p>Animat Habitat Boutique &ndash; <a href="../c/terms-of-purchase/" title="Animat Habitat terms of purchase."><font class="en">Terms of Purchase</font><font class="fr">Conditions d'achat</font></a></p>
 
-        <h5 class="letterhead title">&plus; Address<font class="fr">&nbsp;&#92;&nbsp;Addresse</font></h5>
-        <p>Animat Habitat Development Office &ndash; Feedback<font class="fr">&nbsp;&#92;&nbsp;Bureau de d&eacute;veloppement &ndash; Commentaires</font> [<a href="mailto:feedback@animathabitat.org" title="Address feedback for Animat Habitat." target="_blank" rel="noopener">feedback&nbsp;:&nbsp;animathabitat.org</a>]</p>
-        <p>Animat Habitat Press Secretary<font class="fr">&nbsp;&#92;&nbsp;Attach&eacute; de presse</font> [<a href="mailto:press@animathabitat.org" title="Address of the press secretary Animat Habitat." target="_blank" rel="noopener">press&nbsp;:&nbsp;animathabitat.org</a>]</p>
-        <p>Animat Habitat Secretariat<font class="fr">&nbsp;&#92;&nbsp;Secr&eacute;tariat</font> [<a href="mailto:support@animathabitat.org" title="Address of the secretariat at Animat Habitat." target="_blank" rel="noopener">support&nbsp;:&nbsp;animathabitat.org</a>]</p>
+        <h5 class="letterhead title">&plus; <font class="en">Address</font><font class="fr">Addresse</font></h5>
+        <p>Animat Habitat <font class="en">Development Office &ndash; Feedback</font><font class="fr">Bureau de développement &ndash; Commentaires</font> [<font class="fr">&nbsp;</font><a href="mailto:feedback@animathabitat.org" title="Address feedback for Animat Habitat." target="_blank" rel="noopener">feedback&nbsp;:&nbsp;animathabitat.org</a><font class="fr">&nbsp;</font>]</p>
+        <p>Animat Habitat <font class="en">Press Secretary</font><font class="fr">Attaché de presse</font> [<font class="fr">&nbsp;</font><a href="mailto:press@animathabitat.org" title="Address of the press secretary Animat Habitat." target="_blank" rel="noopener">press&nbsp;:&nbsp;animathabitat.org</a><font class="fr">&nbsp;</font>]</p>
+        <p>Animat Habitat <font class="en">Secretariat</font><font class="fr">Secrétariat</font> [<font class="fr">&nbsp;</font><a href="mailto:support@animathabitat.org" title="Address of the secretariat at Animat Habitat." target="_blank" rel="noopener">support&nbsp;:&nbsp;animathabitat.org</a><font class="fr">&nbsp;</font>]</p>
 
       </div>
 
@@ -94,7 +94,7 @@
 
   <footer>
     <div class="quote">
-      <p class="small">This list was updated September 2022.<font class="fr">&nbsp;&#92;&nbsp;Cette liste a &eacute;t&eacute; mis &agrave; jour en septembre 2022.</font></p>
+      <p class="small"><font class="en">This list was updated March 2025.</font><font class="fr">Cette liste a été mis à jour en mars 2025.</font></p>
 
     </div>
 
@@ -112,12 +112,12 @@
   function toggle_language() {
     if ( toggle_lang == 0 ) {
       r.style.setProperty('--fr', "inline");
-      r.style.setProperty('--fr-en', "none");
+      r.style.setProperty('--en', "none");
       toggle_lang = 1;
     }
     else {
       r.style.setProperty('--fr', "none");
-      r.style.setProperty('--fr-en', "inline");
+      r.style.setProperty('--en', "inline");
       toggle_lang = 0;
     }
   };
