--- a/rss/confirmation/0/index.html
+++ b/rss/confirmation/0/index.html
@@ -25,8 +25,8 @@
   <nav>
     <ul class="page single">
       <li class="crumb logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb active"><a><i>Exit<font class="toggle-form-full fr">, Sortie</font></i></a></li>
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="crumb active"><a><i><font class="en">Exit</font><font class="fr">Sortie</font></i></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
     </ul>
   </nav>
 
@@ -34,9 +34,9 @@
     <article>
 
       <div>
-        <h3 class="letterhead">Thanks for journeying this far.<font class="fr">&nbsp;&#92;&nbsp;Merci d'avoir voyag&eacute; aussi loin.</font></h3>
+        <h3 class="letterhead"><font class="en">Thanks for journeying this far.</font><font class="fr">Merci d'avoir voyagé aussi loin.</font></h3>
 
-        <p class="linebreak"><a href="../../" title="Animat Habitat cast member registration.">Re-register</a>.<font class="fr">&nbsp;&#92;&nbsp;Re-enregistrer.</font></p>
+        <p class="linebreak"><a href="../../" title="Animat Habitat cast member registration."><font class="en">Re-register</font><font class="fr">Re-enregistrer</font></a>.</p>
 
       </div>
 
@@ -45,7 +45,7 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Exit through the <a href="../../../boutique/" title="Animat Habitat boutique.">Boutique</a>.<font class="fr">&nbsp;&#92;&nbsp;Sortir par la boutique.</font></p>
+      <p class="small"><font class="en">Exit through the <a href="../../../boutique/" title="Animat Habitat boutique.">Boutique</a>.</font><font class="fr"><a href="../../../boutique/" title="Animat Habitat boutique.">Sortir par la boutique</a>.</font></p>
 
     </div>
 
@@ -63,12 +63,12 @@
   function toggle_language() {
     if ( toggle_lang == 0 ) {
       r.style.setProperty('--fr', "inline");
-      r.style.setProperty('--fr-en', "none");
+      r.style.setProperty('--en', "none");
       toggle_lang = 1;
     }
     else {
       r.style.setProperty('--fr', "none");
-      r.style.setProperty('--fr-en', "inline");
+      r.style.setProperty('--en', "inline");
       toggle_lang = 0;
     }
   };
