--- a/scene/one/book-of-ella-2/index.html
+++ b/scene/one/book-of-ella-2/index.html
@@ -31,7 +31,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one, scène un.">I</a></li>
       <li class="crumb scene color"><a><i>Book of Ella Ch&nbsp;2</i></a></li>
     </ul>
   </nav>
@@ -175,7 +175,7 @@
 
         <p class="linebreak">Augmented reality adds a layer of interaction, however, the use of an image target in an augmented reality application presents an opportunity to bring the printed comic back into the fold. In the case of a comic book that is extended into a space where any digital information can be placed within &ndash; and outside of &ndash; the comic book panels. The digital information that extends from the printed page can be looked at from any perspective, from the left and from the right and so on. The reader can look into panels, can see outside of the page, and can feel the art and story connected to the world around them. This capability encourages movement around, or manipulation of, the image target in physical space. That control over the way a story is seen can impart a sense of responsibility on behalf of the reader for the direction of the story.</p>
 
-        <p class="linebreak"><i>Here, somewhere in this mixed medium of an augmented reality comic book is where we let the development of <a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un."><i>White Elephant</i></a> roam free.</i></p>
+        <p class="linebreak"><i>Here, somewhere in this mixed medium of an augmented reality comic book is where we let the development of <a href="../" title="Animat Habitat scene one, scène un."><i>White Elephant</i></a> roam free.</i></p>
 
       </div>
 
