--- a/scene/one/companion-app-augmented-reality/index.html
+++ b/scene/one/companion-app-augmented-reality/index.html
@@ -29,7 +29,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one, scène un.">I</a></li>
       <li class="crumb scene color"><a><i>Augmented Reality Application</i></a></li>
     </ul>
   </nav>
@@ -100,7 +100,7 @@
 
       <div class="clear-top">
         <h3 class="linebreak">A Companion App</h3>
-        <p>Scene one at Animat Habitat is an interactive journey with an elephant&mdash;with the goal of creating a connection to our natural world through a gizmo of our media-centric culture. With developer Mai El-Awini and her expertise with augmented reality applications, <a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un."><i>White Elephant</i></a> designed as a comic book as well as a companion app makes possible a more immersive experience than was presented in print or in animation alone.</p>
+        <p>Scene one at Animat Habitat is an interactive journey with an elephant&mdash;with the goal of creating a connection to our natural world through a gizmo of our media-centric culture. With developer Mai El-Awini and her expertise with augmented reality applications, <a href="../" title="Animat Habitat scene one, scène un."><i>White Elephant</i></a> designed as a comic book as well as a companion app makes possible a more immersive experience than was presented in print or in animation alone.</p>
 
       </div>
 
