--- a/scene/one/elephant-conservation-amboseli/index.html
+++ b/scene/one/elephant-conservation-amboseli/index.html
@@ -31,7 +31,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one, scène un.">I</a></li>
       <li class="crumb scene color"><a><i>Elephant Conservation in Amboseli</i></a></li>
     </ul>
   </nav>
@@ -117,7 +117,7 @@
         <p class="linebreak">There are no winners of this conflict. Everyone loses.</p>
 
         <h3 class="linebreak">Wildlife Corridors</h3>
-        <p>Elephants like vanilla, and do not like bees. This is a relationship with forest habitats, and an evolved mechanism that helps to protect certain trees. Conservationists have worked with farmers to apply this knowledge in East Africa. Vanilla has been used to encourage elephants to follow new paths along manmade wildlife corridors. Bees have been kept along fences to detract elephants from raiding maize fields and farmlands. Elephant conservationists have used this natural fear to benefit the elephants by placing beehives near farms in order to prevent elephants from foraging in those areas. This approach seems to be helping to minimize incidents of human-wildlife conflict.<sup>&nbsp;[<a class="button" onclick="fn_4();" title="Dupuis-D&eacute;sormeaux and Macdonald, 2012">3</a>,&nbsp;<a class="button" onclick="fn_4();" title="King, 2018">4</a>]</sup></p>
+        <p>Elephants like vanilla, and do not like bees. This is a relationship with forest habitats, and an evolved mechanism that helps to protect certain trees. Conservationists have worked with farmers to apply this knowledge in East Africa. Vanilla has been used to encourage elephants to follow new paths along manmade wildlife corridors. Bees have been kept along fences to detract elephants from raiding maize fields and farmlands. Elephant conservationists have used this natural fear to benefit the elephants by placing beehives near farms in order to prevent elephants from foraging in those areas. This approach seems to be helping to minimize incidents of human-wildlife conflict.<sup>&nbsp;[<a class="button" onclick="fn_4();" title="Dupuis-Désormeaux and Macdonald, 2012">3</a>,&nbsp;<a class="button" onclick="fn_4();" title="King, 2018">4</a>]</sup></p>
 
         <p class="linebreak">These are two wonderful examples of measures taken to manage the effects of human expansion on elephant habitat. Big Life continues to focus on innovative conservation solutions, continues to establish rapid-response units dedicated to move elephants away from farmlands, and continues to invest in crop-protection fences to deter elephants from entering farmed areas in the first place.</p>
 
@@ -132,7 +132,7 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-4">
-          <p class="small"><sup>3</sup> Dupuis-D&eacute;sormeaux, M., Macdonald, S. &lsquo;Converging evidence for vanilla as an elephant attractant.&rsquo; 2012. <a href="../../../url/researchgate/converging-evidence-for-vanilla-as-an-elephant-attractant/" target="_blank" title="Research Gate / Converging evidence for vanilla as an elephant attractant.">Download&nbsp;PDF</a></p>
+          <p class="small"><sup>3</sup> Dupuis-Désormeaux, M., Macdonald, S. &lsquo;Converging evidence for vanilla as an elephant attractant.&rsquo; 2012. <a href="../../../url/researchgate/converging-evidence-for-vanilla-as-an-elephant-attractant/" target="_blank" title="Research Gate / Converging evidence for vanilla as an elephant attractant.">Download&nbsp;PDF</a></p>
           <p class="small"><sup>4</sup> King, L. &lsquo;Human-elephant co-existence toolbox.&rsquo; Save the Elephants, Elephants and Bees Project. 2018. <a href="../../../url/-com/elephantsandbees-2018-h-e-c-toolbox-pdf/" target="_blank" title="Save the Elephants / Elephants and Bees / HEC Toolbox">Download&nbsp;PDF</a></p>
           <p class="small"><sup>5</sup> Big Life Foundation. &lsquo;Threading elephants through the eye of a needle.&lsquo; 2019. <a href="../../../url/-org/biglife-threading-elephants-through-the-eye-of-a-needle/" target="_blank" title="Big Life Foundation / Threading elephants through the eye of a needle.">Website&nbsp;Link</a></p>
 
