--- a/scene/one/elephant-conservation-angola/index.html
+++ b/scene/one/elephant-conservation-angola/index.html
@@ -31,7 +31,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one, scène un.">I</a></li>
       <li class="crumb scene color"><a><i>Elephant Conservation in Angola</i></a></li>
     </ul>
   </nav>
@@ -188,7 +188,7 @@
       <div>
         <p>Kerllen opens the podcast to perspectives of the local people. And represents his own involvement in eastern Angola. <i>Who are we to know what is best for a region?</i></p>
 
-        <p class="linebreak">Kerllen wonders if life there may have carried on the way the local people have for generations, for the most part. He thinks, <font class="color">&ldquo;</font>The people of Tempu&eacute; would continue to walk days to access their monthly pension.&rdquo; Kerllen continues, &ldquo;They would avoid the shores of the source lakes, the animals would hide in the darkest parts of the forest, and the Miombo woodlands would continue to shelter the region, for the most part.&rdquo; Without outside intervention from NGOWP, or from The Halo Trust, the landmines would stay in the ground. <i>And landmines do help keep people out.</i></p>
+        <p class="linebreak">Kerllen wonders if life there may have carried on the way the local people have for generations, for the most part. He thinks, <font class="color">&ldquo;</font>The people of Tempué would continue to walk days to access their monthly pension.&rdquo; Kerllen continues, &ldquo;They would avoid the shores of the source lakes, the animals would hide in the darkest parts of the forest, and the Miombo woodlands would continue to shelter the region, for the most part.&rdquo; Without outside intervention from NGOWP, or from The Halo Trust, the landmines would stay in the ground. <i>And landmines do help keep people out.</i></p>
 
         <!-- The spread of human population is a ticking time-bomb of problems. -->
 
