--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -7,7 +7,7 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="White Elephant&mdash;comic book and companion app to change the way we look at wildlife.&nbsp;&#92;&nbsp;&Eacute;l&eacute;phant blanc &mdash; une bande dessin&eactue;e et l’app qui l’accompagne pour changer la fa&ccedil;on dont nous regardons la nature." />
+  <meta name="description" content="White Elephant&mdash;comic book and companion app to change the way we look at wildlife.&nbsp;&#92;&nbsp;Éléphant blanc &mdash; une bande dessin&eactue;e et l’app qui l’accompagne pour changer la façon dont nous regardons la nature." />
   <meta name="keywords" content="white elephant, elephant animation, elephant comic book, elephant app, okavango delta" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb logo color"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb scene color"><a><i>White Elephant</i></a></li>
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
       <li class="right thin" id="currency"><a class="title" onclick="toggle_currency();" title="Animat Habitat in Canada, United States of America."><font class="color-reset">
         <font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font>
         <font class="paypal-us">CA&nbsp;&#92;&nbsp;<b class="overscore">US</b></font>
@@ -44,9 +44,9 @@
   <header>
     <div class="quote text-center">
       <h1 class="title">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></h1>
-      <h3>Scene one:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un&nbsp;:</font></h3>
+      <h3>Scene one:<font class="fr">&nbsp;&#92;&nbsp;Scène un&nbsp;:</font></h3>
       <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace"> </font><font class="thin">Elephant</font></a></h1>
-      <h3><font class="color-reset">Comic book and companion app to change the way we look at wildlife.<font class="fr"><br>Une bande dessin&eacute;e et l’app qui l’accompagne pour changer la fa&ccedil;on dont nous regardons la nature.</font></font></h3>
+      <h3><font class="color-reset">Comic book and companion app to change the way we look at wildlife.<font class="fr"><br>Une bande dessinée et l’app qui l’accompagne pour changer la façon dont nous regardons la nature.</font></font></h3>
     </div>
   </header>
 
@@ -55,7 +55,7 @@
       <section class="single">
         <div class="text-center">
           <img alt="Animat Habitat scene one: White Elephant cover art, 2024." class="matte-preview" src="../../inc/img/boutique/01/white-elephant.2024.cover.preview.800.jpg" />
-          <p class="linebreak"><i>White Elephant</i> &ndash; Kalahari basin<font class="fr">&nbsp;&#92;&nbsp;Bassin du Kalahari</font>, Angola&ndash;Botswana&ndash;Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font> (comic book<font class="fr">&nbsp;&#92;&nbsp;bande dessin&eacute;e</font>, &ndash; 2028)</p>
+          <p class="linebreak"><i>White Elephant</i> &ndash; Kalahari basin<font class="fr">&nbsp;&#92;&nbsp;Bassin du Kalahari</font>, Angola&ndash;Botswana&ndash;Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font> (comic book<font class="fr">&nbsp;&#92;&nbsp;bande dessinée</font>, &ndash; 2028)</p>
         </div>
 
       </section>
@@ -78,16 +78,16 @@
     <section class="product single" id="scene">
 
       <div>
-        <h5 class="color"><a class="color overscore" onclick="toggle_meta();">Comic Book</a><font class="fr">&nbsp;&#92;&nbsp;Bande dessin&eacute;e</font></h5>
+        <h5 class="color"><a class="color overscore" onclick="toggle_meta();">Comic Book</a><font class="fr">&nbsp;&#92;&nbsp;Bande dessinée</font></h5>
         <div class="clear" id="product-meta">
-          <!-- <p class="small">Designed with<font class="fr">&nbsp;&#92;&nbsp;Con&ccedil;u avec</font> .</p> -->
-          <p class="small">Created in Canada.<font class="fr">&nbsp;&#92;&nbsp;Cr&eacute;&eacute; au Canada.</font></p>
+          <!-- <p class="small">Designed with<font class="fr">&nbsp;&#92;&nbsp;Conçu avec</font> .</p> -->
+          <p class="small">Created in Canada.<font class="fr">&nbsp;&#92;&nbsp;Créé au Canada.</font></p>
           <h5 class="author">Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</h5>
 
         </div>
         <!-- <p>## pages.</p> -->
 
-        <p class="linebreak">Journey with an elephant across a sea of sand: <i>White Elephant</i> is an e-book and a limited edition print that comes to life with a companion app. This publication is first in a series of scenes in wildlife art at Animat Habitat. <i>White Elephant</i>&mdash;the comic book is available for pre-order as a first-edition paperback.<font class="fr">&nbsp;&#92;&nbsp;Voyage avec un &eacute;l&eacute;phant &agrave; travers une mer de sable&nbsp;: <i>&Eacute;l&eacute;phant blanc</i> est un publication num&eacute;rique et une &eacute;dition limit&eacute;e qui prend vie avec l'application compagnon. Cette publication est la premi&egrave;re d'une s&eacute;rie de projets chez Animat Habitat. La bande dessin&eacute;e est pr&ecirc;t &agrave; pr&eacute;commander en tant que premi&egrave;re &eacute;dition broch&eacute;.</font></p>
+        <p class="linebreak">Journey with an elephant across a sea of sand: <i>White Elephant</i> is an e-book and a limited edition print that comes to life with a companion app. This publication is first in a series of scenes in wildlife art at Animat Habitat. <i>White Elephant</i>&mdash;the comic book is available for pre-order as a first-edition paperback.<font class="fr">&nbsp;&#92;&nbsp;Voyage avec un éléphant à travers une mer de sable&nbsp;: <i>Éléphant blanc</i> est un publication numérique et une édition limitée qui prend vie avec l'application compagnon. Cette publication est la première d'une série de projets chez Animat Habitat. La bande dessinée est prét à précommander en tant que première édition broché.</font></p>
 
         <p class="linebreak">Language:<font class="fr">&nbsp;&#92;&nbsp;Langue&nbsp;:</font> En<font class="fr">&nbsp;&#92;&nbsp;An</font>, Fr, Ja</p>
         <p>Publication Date:<font class="fr">&nbsp;&#92;&nbsp;Date de parution&nbsp;:</font> &ndash;</p>
@@ -97,7 +97,7 @@
       <div class="clear diptych ptych-fixed">
 
         <div class="clear-bottom">
-          <h5><a class="overscore" onclick="toggle_0101_0511();">E-book</a><font class="fr">&nbsp;&#92;&nbsp;Publication num&eacute;rique</font></h5>
+          <h5><a class="overscore" onclick="toggle_0101_0511();">E-book</a><font class="fr">&nbsp;&#92;&nbsp;Publication numérique</font></h5>
           <div class="clear" id="product-0101-0511">
             <p><font class="sku small">0101 0511</font></p>
 
@@ -113,21 +113,21 @@
 
           <!-- <form></form> -->
 
-          <p class="linebreak small">Digital download is made available upon publication.<font class="fr">&nbsp;&#92;&nbsp;T&eacute;l&eacute;chargement num&eacute;rique est mis &agrave; disposition d&egrave;s la publication.</font></p>
+          <p class="linebreak small">Digital download is made available upon publication.<font class="fr">&nbsp;&#92;&nbsp;Téléchargement numérique est mis à disposition dès la publication.</font></p>
 
         </div>
 
         <div class="clear-bottom">
-          <h5><a class="overscore" onclick="toggle_0101_1511();">Full Color Paperback</a><font class="fr">&nbsp;&#92;&nbsp;Broch&eacute; en couleur</font></h5>
+          <h5><a class="overscore" onclick="toggle_0101_1511();">Full Color Paperback</a><font class="fr">&nbsp;&#92;&nbsp;Broché en couleur</font></h5>
           <div class="clear" id="product-0101-1511">
             <p><font class="sku small">0101 1511</font></p>
-            <p>First edition.<font class="fr">&nbsp;&#92;&nbsp;Premi&egrave;re &eacute;dition</font></p>
+            <p>First edition.<font class="fr">&nbsp;&#92;&nbsp;Première édition</font></p>
 
           </div>
           <p class="">Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">50</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price-us">87</font></font></p>
 
           <div class="clear paypal-ca">
-            <p class="lineend small">Shipping within Canada is included.<font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition au Canada est incluse.</font></p>
+            <p class="lineend small">Shipping within Canada is included.<font class="fr">&nbsp;&#92;&nbsp;L'expédition au Canada est incluse.</font></p>
 
           </div>
 
@@ -148,7 +148,7 @@
             </select>
 
             <input type="hidden" name="currency_code" value="CAD">
-            <button type="submit" name="submit" alt="White Elephant Comic Book via PayPal">Pre-order<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;-commander</font></button>
+            <button type="submit" name="submit" alt="White Elephant Comic Book via PayPal">Pre-order<font class="fr">&nbsp;&#92;&nbsp;Pré-commander</font></button>
 
           </form>
 
@@ -158,18 +158,18 @@
             <input type="hidden" name="hosted_button_id" value="A8CXERFPW86KG">
 
             <input type="hidden" name="currency_code" value="USD">
-            <button type="submit" name="submit" alt="White Elephant Comic Book via PayPal">Pre-order<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;-commander</font></button>
+            <button type="submit" name="submit" alt="White Elephant Comic Book via PayPal">Pre-order<font class="fr">&nbsp;&#92;&nbsp;Pré-commander</font></button>
 
           </form>
 
-          <p class="linebreak small"><font class="paypal-ca">Select the <u>International</u> option for shipping outside Canada.<font class="fr">&nbsp;&#92;&nbsp;Veuillez s&eacute;lectionner l'option <u>Internationale</u> pour l'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada.</font><sup>&nbsp;[1]</sup></font></p>
+          <p class="linebreak small"><font class="paypal-ca">Select the <u>International</u> option for shipping outside Canada.<font class="fr">&nbsp;&#92;&nbsp;Veuillez sélectionner l'option <u>Internationale</u> pour l'expédition à l'extérieur du Canada.</font><sup>&nbsp;[1]</sup></font></p>
 
         </div>
 
       </div>
 
       <div class="quote">
-        <p class="small"><sup>1</sup> International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat &frasl; Terms of Purchase">Terms of Purchase</a>.<font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada est limit&eacute;e aux pays r&eacute;pertori&eacute;s comme disponibles pour l'exp&eacute;dition international dans les conditions d'achat de la boutique.</font></p>
+        <p class="small"><sup>1</sup> International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat terms of purchase.">Terms of Purchase</a>.<font class="fr">&nbsp;&#92;&nbsp;L'expédition à l'extérieur du Canada est limitée aux pays répertoriés comme disponibles pour l'expédition international dans les conditions d'achat de la boutique.</font></p>
 
       </div>
 
@@ -179,7 +179,7 @@
 
   <div class="clear">
     <div class="quote clear-bottom text-center">
-      <h2>Project Broadcast<font class="fr">&nbsp;&#92;&nbsp;Mises &agrave; jour du projet</font></h2>
+      <h2>Project Broadcast<font class="fr">&nbsp;&#92;&nbsp;Mises à jour du projet</font></h2>
 
     </div>
 
