--- a/scene/one/reference-art/index.html
+++ b/scene/one/reference-art/index.html
@@ -31,7 +31,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one, scène un.">I</a></li>
       <li class="crumb scene color"><a><i>Reference Art &ndash; History</i></a></li>
     </ul>
   </nav>
@@ -43,7 +43,7 @@
         <h2 class="color">Reference Art</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat.</h5>
 
-        <p class="linebreak"><i>In the making of <a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">White Elephant</a>&mdash;a comic book, a companion app and an invitation to change the way we look at wildlife&mdash;I have had a number of influences. This article introduces the project through its roots in art and story. In storytelling, like in design, we communicate with imagery that is familiar, symbolic and even iconic to drive focus to specific details carrying a unique visual tone. Here are some of the artworks that have championed the culture and design of wildlife art.</i></p>
+        <p class="linebreak"><i>In the making of <a href="../" title="Animat Habitat scene one, scène un.">White Elephant</a>&mdash;a comic book, a companion app and an invitation to change the way we look at wildlife&mdash;I have had a number of influences. This article introduces the project through its roots in art and story. In storytelling, like in design, we communicate with imagery that is familiar, symbolic and even iconic to drive focus to specific details carrying a unique visual tone. Here are some of the artworks that have championed the culture and design of wildlife art.</i></p>
 
       </div>
 
@@ -52,7 +52,7 @@
 
       <div class="clear-top">
         <h3 class="linebreak">Animals in Art History</h3>
-        <p>Look way back to the beginnings of visual storytelling&mdash;to cave art that is as aesthetically textured as it is rich with historical implication. All the way back to the most pertinent example: the Decorated Cave of Pont d’Arc, &ldquo;located in a limestone plateau of the Ard&egrave;che River in southern France&rdquo;, as introduced on the Grotte Chauvet-Pont d’Arc UNESCO World Heritage Listing. This decorated cave, also described in the great history book of Disney Animation: The Illusion of Life (1981) by Frank Thomas and Ollie Johnston, &ldquo;contains the earliest known and best preserved figurative cave paintings in the world,&rdquo; These cave paintings are around thirty thousand years old, Frank and Ollie continued, &ldquo;they demonstrate a range of techniques including the skillful use of colour, the combinations of paint and engraving, anatomical precision, three-dimensionality and movement.&rdquo;</p>
+        <p>Look way back to the beginnings of visual storytelling&mdash;to cave art that is as aesthetically textured as it is rich with historical implication. All the way back to the most pertinent example: the Decorated Cave of Pont d’Arc, &ldquo;located in a limestone plateau of the Ardèche River in southern France&rdquo;, as introduced on the Grotte Chauvet-Pont d’Arc UNESCO World Heritage Listing. This decorated cave, also described in the great history book of Disney Animation: The Illusion of Life (1981) by Frank Thomas and Ollie Johnston, &ldquo;contains the earliest known and best preserved figurative cave paintings in the world,&rdquo; These cave paintings are around thirty thousand years old, Frank and Ollie continued, &ldquo;they demonstrate a range of techniques including the skillful use of colour, the combinations of paint and engraving, anatomical precision, three-dimensionality and movement.&rdquo;</p>
 
       </div>
 
