--- a/scene/one/wildlife-documentary/index.html
+++ b/scene/one/wildlife-documentary/index.html
@@ -31,7 +31,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one, scène un.">I</a></li>
       <li class="crumb scene color"><a><i>Wildlife Documentary &ndash; Action</i></a></li>
     </ul>
   </nav>
@@ -56,7 +56,7 @@
       <div class="color quote">
         <h4><font class="color text-quote">&ldquo;</font><i>This is the only region in the world where you can still find mountain gorillas. There are only about 800 left in the whole world. Now if we lose them, we well have lost something very important for humanity. It is thanks to the animals, especially these gorillas, that our forest continues to be protected. Tourism brings in money to help us sustain the conservation of nature. There are many projects being implemented around the park because of the gorillas.</i><font class="color text-quote">&rdquo;</font> <font class="color thin">[&nbsp;Translation&nbsp;] &mdash;&nbsp;Andre Bauma, gorilla caretaker at the gorilla orphanage in Rumangabo, Virunga southern sector. <i>Virunga</i> (2014)</font></h4>
 
-        <!-- Dans le monde entier, c'est dans cet entity l&agrave; o&ugrave; vous pouvez trouver encore les gorilles des montagnes. Il y a seulement environt huit cent qui reste sure toute l'enti&egrave;re plan&egrave;te terre. Maintenant si nous les perdont, nous auront perdu quelque chose de tr&egrave;s importante pour l'humanit&eacute;. Notre for&ecirc;t ici, c'est grace a ces animaux, et surtout les gorilles, que cette for&ecirc;t est encore prot&eactue;g&eacute;e. Tourisme nous apporte de l'argent pour nous aider a continuer nos activit&eacute;s de la conservation de la nature. Il y a plusieurs projets qui sont entrain d'&ecirc;tre r&eactue;aliser autour du parc national de Virunga a cause de nos gorilles. -->
+        <!-- Dans le monde entier, c'est dans cet entity là où vous pouvez trouver encore les gorilles des montagnes. Il y a seulement environt huit cent qui reste sure toute l'entière planète terre. Maintenant si nous les perdont, nous auront perdu quelque chose de très importante pour l'humanité. Notre forét ici, c'est grace a ces animaux, et surtout les gorilles, que cette forét est encore prot&eactue;gée. Tourisme nous apporte de l'argent pour nous aider a continuer nos activités de la conservation de la nature. Il y a plusieurs projets qui sont entrain d'étre r&eactue;aliser autour du parc national de Virunga a cause de nos gorilles. -->
 
       </div>
 
@@ -73,7 +73,7 @@
 
         <p class="linebreak">The torn and colorful look of the opening titles, designed by Framestore, directly supports the theme of a war-torn history in Congo as well as reflects the vibrant culture and spirit of its subjects: the Congolese. The pattern of colors applied within the title lettering, of course, is the national flag of the Democratic Republic of Congo.</p>
 
-        <p class="linebreak">The film, directed by Orlando von Einsiedel, combines investigative journalism and nature documentary in a gripping expos&eacute; of the realities of life in the Congo. The film documents corruption and imposition of <i>big</i> oil companies, namely SOCO, as well as other <i>big</i> interests, such as electronics industries, on an otherwise historically undermined but good natured people who have seen some benefit from tourism driven to the park. Despite claiming in June 2014 that they would halt operations, SOCO had refused to withdraw unconditionally from Virunga by the release of the film.<sup>&nbsp;[<a class="button" onclick="fn();" title="Ramsey, 2017.">2</a>]</sup></p>
+        <p class="linebreak">The film, directed by Orlando von Einsiedel, combines investigative journalism and nature documentary in a gripping exposé of the realities of life in the Congo. The film documents corruption and imposition of <i>big</i> oil companies, namely SOCO, as well as other <i>big</i> interests, such as electronics industries, on an otherwise historically undermined but good natured people who have seen some benefit from tourism driven to the park. Despite claiming in June 2014 that they would halt operations, SOCO had refused to withdraw unconditionally from Virunga by the release of the film.<sup>&nbsp;[<a class="button" onclick="fn();" title="Ramsey, 2017.">2</a>]</sup></p>
 
         <p class="linebreak">The film is dedicated to the rangers who gave up their lives in the struggle for peace in eastern Congo.</p>
 
