--- a/scene/three/index.html
+++ b/scene/three/index.html
@@ -7,7 +7,7 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="White Bear&mdash;mural and companion app to change the way we look at wildlife.&nbsp;&#92;&nbsp;Ours blanc &mdash; une peinture murale et l’app qui l’accompagne pour changer la fa&ccedil;on dont nous regardons la nature." />
+  <meta name="description" content="White Bear&mdash;mural and companion app to change the way we look at wildlife.&nbsp;&#92;&nbsp;Ours blanc &mdash; une peinture murale et l’app qui l’accompagne pour changer la façon dont nous regardons la nature." />
   <meta name="keywords" content="white bear, polar bear animation, polar bear poster, polar bear app, canadian archipelago" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -33,16 +33,16 @@
     <ul class="page">
       <li class="crumb logo color"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Three) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.three.svg"/></a></li>
       <li class="crumb scene color"><a><i>White Bear</i></a></li>
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
 
   <header>
     <div class="quote text-center">
       <h1 class="title">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></h1>
-      <h3>Scene three:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne trois&nbsp;:</font></h3>
+      <h3>Scene three:<font class="fr">&nbsp;&#92;&nbsp;Scène trois&nbsp;:</font></h3>
       <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace"> </font><font class="thin">Bear</font></a></h1>
-      <h3><font class="color-reset">Mural and companion app to change the way we look at wildlife.<font class="fr"><br>Une peinture murale et l'app qui l'accompagne pour changer la fa&ccedil;on dont nous regardons la nature.</font></font></h3>
+      <h3><font class="color-reset">Mural and companion app to change the way we look at wildlife.<font class="fr"><br>Une peinture murale et l'app qui l'accompagne pour changer la façon dont nous regardons la nature.</font></font></h3>
     </div>
   </header>
 
@@ -66,14 +66,14 @@
     <section class="product single" id="scene">
 
       <div>
-        <h5 class="color"><a class="color overscore" onclick="toggle_meta();">Poster Series</a><font class="fr">&nbsp;&#92;&nbsp;S&eacute;rie d'affiches</font></h5>
+        <h5 class="color"><a class="color overscore" onclick="toggle_meta();">Poster Series</a><font class="fr">&nbsp;&#92;&nbsp;Série d'affiches</font></h5>
         <div class="clear" id="product-meta">
-          <!-- <p class="small">Created in Canada.<font class="fr">&nbsp;&#92;&nbsp;Cr&eacute;&eacute; au Canada.</font></p> -->
+          <!-- <p class="small">Created in Canada.<font class="fr">&nbsp;&#92;&nbsp;Créé au Canada.</font></p> -->
           <!-- <h5 class="author">Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</h5> -->
 
         </div>
 
-        <p class="linebreak">Drift along with a polar bear cub across a sea of ice: <i>White Bear</i> is a mural that comes to life with a companion app and with passers-by. This publication is third in a series of scenes in wildlife art at Animat Habitat. A poster series is not yet available for pre-order.<font class="fr">&nbsp;&#92;&nbsp;&Agrave; la d&eacute;rive avec un ourson polaire sur une mer de glace&nbsp;: <i>Ours blanc</i> est une peinture murale interactive qui prend vie avec l'application compagnon et avec les passants. Cette publication est la troisi&egrave;me d'une s&eacute;rie de projets chez Animat Habitat. Une s&eacute;rie d'affiches n'est pas encore disponible en pr&eacute;commande.</font></p>
+        <p class="linebreak">Drift along with a polar bear cub across a sea of ice: <i>White Bear</i> is a mural that comes to life with a companion app and with passers-by. This publication is third in a series of scenes in wildlife art at Animat Habitat. A poster series is not yet available for pre-order.<font class="fr">&nbsp;&#92;&nbsp;À la dérive avec un ourson polaire sur une mer de glace&nbsp;: <i>Ours blanc</i> est une peinture murale interactive qui prend vie avec l'application compagnon et avec les passants. Cette publication est la troisième d'une série de projets chez Animat Habitat. Une série d'affiches n'est pas encore disponible en précommande.</font></p>
 
         <p class="linebreak">Installation Date:<font class="fr">&nbsp;&#92;&nbsp;Date d'installation&nbsp;:</font> &ndash;</p>
 
@@ -85,7 +85,7 @@
 
   <div class="clear">
     <div class="quote clear-bottom text-center">
-      <h2>Project Broadcast<font class="fr">&nbsp;&#92;&nbsp;Mises &agrave; jour du projet</font></h2>
+      <h2>Project Broadcast<font class="fr">&nbsp;&#92;&nbsp;Mises à jour du projet</font></h2>
     </div>
 
   </div>
@@ -113,7 +113,7 @@
   <div class="clear color">
     <section class="single">
       <div class="quote text-center">
-        <h4><font class="color text-quote">&ldquo;</font><font class="thin">By now, bears are all but guaranteed to disappear from a lot of their range. But the science suggests that there is still time to slow climate change down and, in the long term, keep the species—a many others along with it—from vanishing entirely.</font><font class="color text-quote">&rdquo;</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;&laquo;&nbsp;Les ours sont pratiquement assur&eacute;s de dispara&icirc;tre d’une grande partie de leur aire de r&eacute;partition. Mais la science sugg&egrave;re qu’il est encore temps de ralentir le changement climatique et, &agrave; long terme, d’emp&ecirc;cher cette esp&egrave;ce – ainsi que bien d’autres – de dispara&icirc;tre compl&egrave;tement.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Jon Mooallem, <i>Wild Ones: A Sometimes Dismaying, Weirdly Reassuring Story About Looking at People Looking at Animals in America</i>, p&nbsp;16, Penguin Books (2014)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><font class="thin">By now, bears are all but guaranteed to disappear from a lot of their range. But the science suggests that there is still time to slow climate change down and, in the long term, keep the species—a many others along with it—from vanishing entirely.</font><font class="color text-quote">&rdquo;</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;&laquo;&nbsp;Les ours sont pratiquement assurés de disparaître d’une grande partie de leur aire de répartition. Mais la science suggère qu’il est encore temps de ralentir le changement climatique et, à long terme, d’empécher cette espèce – ainsi que bien d’autres – de disparaître complètement.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Jon Mooallem, <i>Wild Ones: A Sometimes Dismaying, Weirdly Reassuring Story About Looking at People Looking at Animals in America</i>, p&nbsp;16, Penguin Books (2014)</font></h4>
 
         <!-- Martha Stewart on the Tundra -->
         <!-- The animal had become a symbol for some otherwise inexpressible pang—of guilt, of panic—that can burble in the back of your mind, or the pit of your stomach, when you think about the future of life on Earth. …  -->
