--- a/scene/two/the-beginning-of-painting/index.html
+++ b/scene/two/the-beginning-of-painting/index.html
@@ -31,7 +31,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Two) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.two.svg"/></a></li>
-      <li class="crumb btn color"><a href="../" title="Animat Habitat scene two. &verbar;&nbsp;sc&egrave;ne deux.">II</a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene two, scène deux.">II</a></li>
       <li class="crumb scene color"><a><i>The Beginning of Painting</i></a></li>
     </ul>
   </nav>
@@ -95,7 +95,7 @@
         <h3 class="linebreak">The Beginning of Painting</h3>
         <p>Red&ndash;yellow&ndash;blue is the primary color model that many will have learned at an early age in art education. In theory, the art color wheel has a harmonious logic. In practice, the purples will blend a bit dark.</p>
 
-        <p class="linebreak">Consider blending colored crayons, or pencils, or pastels or gouaches and so on. A pure red and a pure yellow will blend into a range of oranges. A pure yellow and a pure blue will blend into a range of greens. A pure blue and a pure red will blend into a range of dark, neutral purples and violets. Oil colors will blend just the same. The reason is that these mediums have all been set with the same pigments. This color study has used only the three primary pigments, with white. This is an exercise of the range of a traditional primary color palette, painted with P&eacute;b&eacute;o oil colors on a 9 by 7 inch canvas board.</p>
+        <p class="linebreak">Consider blending colored crayons, or pencils, or pastels or gouaches and so on. A pure red and a pure yellow will blend into a range of oranges. A pure yellow and a pure blue will blend into a range of greens. A pure blue and a pure red will blend into a range of dark, neutral purples and violets. Oil colors will blend just the same. The reason is that these mediums have all been set with the same pigments. This color study has used only the three primary pigments, with white. This is an exercise of the range of a traditional primary color palette, painted with Pébéo oil colors on a 9 by 7 inch canvas board.</p>
       </div>
 
       <img alt="Cadmium Red, Cadmium Yellow, Pthalo Blue, with Titanium White &copy; 2020 Dane Aleksander" src="../../../inc/img/02/the-beginning-of-painting.study.red-yellow-blue.1280.jpg" />
