--- a/scene/zero/northern-white-rhinoceros/index.html
+++ b/scene/zero/northern-white-rhinoceros/index.html
@@ -31,7 +31,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb btn"><a href="../" title="Animat Habitat scene zero. &verbar;&nbsp;sc&egrave;ne z&eacute;ro.">&lt;</a></li>
+      <li class="crumb btn"><a href="../" title="Animat Habitat scene zero, scène zéro.">&lt;</a></li>
       <li class="crumb scene"><a><i>Northern White Rhinoceros</i></a></li>
     </ul>
   </nav>
