--- a/app/beta/confirmation/1/index.html
+++ b/app/beta/confirmation/1/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat beta. Welcome, Bienvenue.</title>
+  <title>Animat Habitat app. Beta, Bêta. Welcome, Bienvenue.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../../inc/css/dark.light.unicorn.css" />
@@ -25,9 +25,9 @@
   <nav>
     <ul class="page">
       <li class="crumb logo"><a href="../../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb"><a href="../../" title="Animat Habitat beta.">Beta</a></li>
-      <li class="crumb active"><a><i>Welcome<font class="toggle-form-full fr">, Bienvenue</font></i></a></li>
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="crumb"><a href="../../" title="Animat Habitat app. Beta, Bêta."><font class="en">Beta</font><font class="fr">Bêta</font></a></li>
+      <li class="crumb active"><a><i><font class="en">Welcome</font><font class="fr">Bienvenue</font></i></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
     </ul>
   </nav>
 
@@ -35,15 +35,15 @@
     <article>
 
       <div>
-        <h3 class="letterhead">Welcome into the beta program queue.<font class="fr">&nbsp;&#92;&nbsp;Bienvenue dans la file d'attente du programme b&ecirc;ta.</font></h3>
+        <h3 class="letterhead"><font class="en">Welcome into the beta program queue.</font><font class="fr">Bienvenue dans la file d'attente du programme bêta.</font></h3>
 
-        <h5 class="linebreak">You have registered successfully.<font class="fr">&nbsp;&#92;&nbsp;Vous vous &ecirc;tes bien inscrit.</font></h5>
-        <p>For active members of our beta programs, a survey campaign will be delivered to your inbox as a mechanism for you to provide feedback. If you find any bugs in a beta version of the companion app, or have suggestions for an improvement, we welcome your feedback through our dedicated feedback form for beta versions of the companion app.<font class="fr">&nbsp;&#92;&nbsp;Pour les membres actifs d'un programme b&ecirc;ta chez Animat Habitat, une campagne d'enqu&ecirc;te sera livr&eacute;e &agrave; votre address e-mail pour vous permettre de fournir des commentaires. Si vous rencontrez des probl&egrave;mes dans une version b&ecirc;ta de l'application compagnon ou si vous avez des suggestions d'am&eacute;lioration, nous appr&eacute;cions vos commentaires via notre formulaire de commentaires d&eacute;di&eacute; aux versions b&ecirc;ta de l'application compagnon.</font></p>
+        <h5 class="linebreak"><font class="en">You have registered successfully.</font><font class="fr">Vous vous êtes bien inscrit.</font></h5>
+        <p><font class="en">For active members of our beta programs, a survey campaign will be delivered to your inbox as a mechanism for you to provide feedback. If you find any bugs in a beta version of the companion app, or have suggestions for an improvement, we welcome your feedback through our dedicated feedback form for beta versions of the companion app.</font><font class="fr">Pour les membres actifs d'un programme bêta chez Animat Habitat, une campagne d'enquête sera livrée à votre address e-mail pour vous permettre de fournir des commentaires. Si vous rencontrez des problèmes dans une version bêta de l'application compagnon ou si vous avez des suggestions d'amélioration, nous apprécions vos commentaires via notre formulaire de commentaires dédié aux versions bêta de l'application compagnon.</font></p>
 
-        <p class="linebreak">Beta: Companion App <a href="../../../" title="Beta: Companion App Feedback Form">Feedback Form</a><font class="fr">&nbsp;&#92;&nbsp;Formulaire de commentaires sur l'application compagnon b&ecirc;ta.</font></p>
+        <p class="linebreak"><a href="../../../" title="Animat Habitat app. Feedback, Commentaires."><font class="en">Companion App Feedback Form</font><font class="fr">Formulaire de commentaires sur l'application compagnon</a></font>.</p>
 
-        <h5 class="linebreak">Join as a patron.<font class="fr">&nbsp;&#92;&nbsp;Rejoignez-nous en tant que patron.</font></h5>
-        <p>Receive a certificate of membership as an annual patron of the scenes in wildlife art or as a member of the Periwinkle or Silver council at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Recevez un certificat d'adh&eacute;sion annuel en tant que patron des sc&egrave;nes d'art de la nature ou en tant que membre du Conseil Bleu Pervenche ou Conseil Silver chez Animat Habitat.</font></p>
+        <h5 class="linebreak"><font class="en">Join as a patron.</font><font class="fr">Rejoignez-nous en tant que patron.</font></h5>
+        <p><font class="en">Receive a certificate of membership as an annual patron of the scenes in wildlife art or as a member of the Periwinkle or Silver council at Animat Habitat.</font><font class="fr">Recevez un certificat d'adhésion annuel en tant que patron des scènes d'art de la nature ou en tant que membre du Conseil Bleu Pervenche ou Conseil Silver chez Animat Habitat.</font></p>
 
         <p class="linebreak">Animat Habitat <a href="../../../../patron/" title="Animat Habitat patrons.">Patron</a></p>
 
@@ -54,9 +54,9 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Thanks in advance for your participation.<font class="fr">&nbsp;&#92;&nbsp;Merci d'avance pour votre participation.</font></p>
+      <p class="small"><font class="en">Thanks in advance for your participation.</font><font class="fr">Merci d'avance pour votre participation.</font></p>
 
-      <p class="linebreak small">Exit through the <a href="../../../../boutique/" title="Animat Habitat boutique.">Boutique</a>.<font class="fr">&nbsp;&#92;&nbsp;Sortir par la boutique.</font></p>
+      <p class="linebreak small"><font class="en">Exit through the <a href="../../../../boutique/" title="Animat Habitat boutique.">Boutique</a>.</font><font class="fr"><a href="../../../../boutique/" title="Animat Habitat boutique.">Sortir par la boutique</a>.</font></p>
     </div>
 
   </footer>
@@ -73,12 +73,12 @@
   function toggle_language() {
     if ( toggle_lang == 0 ) {
       r.style.setProperty('--fr', "inline");
-      r.style.setProperty('--fr-en', "none");
+      r.style.setProperty('--en', "none");
       toggle_lang = 1;
     }
     else {
       r.style.setProperty('--fr', "none");
-      r.style.setProperty('--fr-en', "inline");
+      r.style.setProperty('--en', "inline");
       toggle_lang = 0;
     }
   };
