--- a/boutique/exit/index.html
+++ b/boutique/exit/index.html
@@ -26,24 +26,22 @@
     <ul class="page">
       <li class="crumb logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb"><a href="../" title="Animat Habitat boutique.">Boutique</a></li>
-      <li class="crumb active"><a><i>Exit<font class="toggle-form-full fr">, Sortie</font></i></a></li>
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="crumb active"><a><i><font class="en">Exit</font><font class="fr">Sortie</font></i></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
     </ul>
   </nav>
 
   <section>
     <article>
       <div>
-        <h3 class="letterhead">Thanks for supporting wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Merci de soutenir l'art de la nature.</font></h3>
-        <p class="linebreak color">Exit through the <a href="../" title="Animat Habitat boutique.">Boutique</a>.<font class="fr">&nbsp;&#92;&nbsp;Sortir par la boutique.</font></p>
+        <h3 class="letterhead"><font class="en">Thanks for supporting wildlife art.</font><font class="fr">Merci de soutenir l'art de la nature.</font></h3>
+        <p class="linebreak color"><font class="en">Exit through the <a href="../" title="Animat Habitat boutique.">Boutique</a>.</font><font class="fr"><a href="../" title="Animat Habitat boutique.">Sortir par la boutique</a>.</font></p>
       </div>
 
     </article><br class="clear">
   </section>
 
-  <footer>
-
-  </footer>
+  <footer></footer>
 
 </body>
 
@@ -57,12 +55,12 @@
   function toggle_language() {
     if ( toggle_lang == 0 ) {
       r.style.setProperty('--fr', "inline");
-      r.style.setProperty('--fr-en', "none");
+      r.style.setProperty('--en', "none");
       toggle_lang = 1;
     }
     else {
       r.style.setProperty('--fr', "none");
-      r.style.setProperty('--fr-en', "inline");
+      r.style.setProperty('--en', "inline");
       toggle_lang = 0;
     }
   };
