--- a/boutique/index.html
+++ b/boutique/index.html
@@ -7,7 +7,7 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="Art of wild animals to help protect their ecosystems and the biodiversity that cascades from their presence.&nbsp;&#92;&nbsp;L'art des animaux sauvages pour prot&eacute;ger leurs &eacute;cosyst&egrave;mes et la biodiversit&eacute; qui profite de leur pr&eacute;sence." />
+  <meta name="description" content="Art of wild animals to help protect their ecosystems and the biodiversity that cascades from their presence.&nbsp;&#92;&nbsp;L'art des animaux sauvages pour protéger leurs écosystèmes et la biodiversité qui profite de leur présence." />
   <meta name="keywords" content="wildlife art canada, wildlife art boutique, wildlife art gift, wildlife art shop, wildlife conservation art" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -33,8 +33,8 @@
     <ul class="page">
       <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb active"><a><i>Boutique</i></a></li>
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
-      <!--li class="right thin"><a class="item-count" href="https://animathabitat.org/cart/" title="Animat Habitat cart&nbsp;&#92;&nbsp;panier">Cart<font class="fr">&nbsp;&#92;&nbsp;Panier</font></a></li-->
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
+      <!--li class="right thin"><a class="item-count" href="https://animathabitat.org/cart/" title="Animat Habitat cart&nbsp;&#92;&nbsp;panier"><font class="en">Cart</font><font class="fr">Panier</font></a></li-->
     </ul>
   </nav>
 
@@ -42,9 +42,14 @@
     <div class="quote text-center">
       <h1 class="title"><font class="color-reset">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></h1>
       <h3>
-        <a href="medium/digital-numerique/" title="Animat Habitat boutique. Digital editions, &Eacute;ditions num&eacute;riques."><font class="overscore">Digital Editions</font></a><font class="fr">&nbsp;&#92;&nbsp;num&eacute;riques</font>
-         &middot; <a href="medium/giclee/" title="Animat Habitat boutique. Gicl&eacute;e."><font class="overscore">Gicl&eacute;e Prints</font></a><font class="fr">&nbsp;&#92;&nbsp;Gicl&eacute;es</font>
-         <!-- &middot; <a href="medium/original/" title="Animat Habitat boutique. Traditional artworks, Oeuvres traditionels."><font class="overscore">Artworks</font></a><font class="fr">&nbsp;&#92;&nbsp;Oeuvres</font> -->
+        <a class="overscore" href="medium/digital-numerique/" title="Animat Habitat boutique. Digital editions, Éditions numériques.">
+          <font class="en">Digital Editions</font>
+          <font class="fr">Editions numériques</font>
+        </a> &middot; <a class="overscore" href="medium/giclee/" title="Animat Habitat boutique. Giclée.">
+          <font class="en">Giclée Prints</font>
+          <font class="fr">Giclées</font>
+        </a>
+        <!-- &middot; <a class="overscore" href="medium/original/" title="Animat Habitat boutique. Traditional artworks, Oeuvres traditionels."><font class="en">Artworks</font></font><font class="fr">Oeuvres</font></a> -->
       </h3>
     </div>
 
@@ -68,12 +73,12 @@
   function toggle_language() {
     if ( toggle_lang == 0 ) {
       r.style.setProperty('--fr', "inline");
-      r.style.setProperty('--fr-en', "none");
+      r.style.setProperty('--en', "none");
       toggle_lang = 1;
     }
     else {
       r.style.setProperty('--fr', "none");
-      r.style.setProperty('--fr-en', "inline");
+      r.style.setProperty('--en', "inline");
       toggle_lang = 0;
     }
   };
