--- a/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
+++ b/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
@@ -7,11 +7,11 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="Art of wild animals to help protect their ecosystems and the biodiversity that cascades from their presence.&nbsp;&#92;&nbsp;L'art des animaux sauvages pour prot&eacute;ger leurs &eacute;cosyst&egrave;mes et la biodiversit&eacute; qui profite de leur pr&eacute;sence." />
+  <meta name="description" content="Art of wild animals to help protect their ecosystems and the biodiversity that cascades from their presence.&nbsp;&#92;&nbsp;L'art des animaux sauvages pour protéger leurs écosystèmes et la biodiversité qui profite de leur présence." />
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat boutique. Digital editions, &Eacute;ditions num&eacute;riques. Last of the Big Tuskers &ndash; collection (2018).</title>
+  <title>Animat Habitat boutique. Digital editions, Éditions numériques. Last of the Big Tuskers &ndash; collection, 2018.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../../inc/css/dark.light.unicorn.css" />
@@ -26,9 +26,9 @@
     <ul class="page">
       <li class="crumb logo"><a href="../../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb"><a href="../../../" title="Animat Habitat boutique.">Boutique</a></li>
-      <li class="crumb"><a href="../" title="Animat Habitat boutique. Digital editions, &Eacute;ditions num&eacute;riques.">Digital</a></li>
+      <li class="crumb"><a href="../" title="Animat Habitat boutique. Digital editions, Éditions numériques.">Digital</a></li>
       <li class="crumb active"><a><i>Magnificent Seven</i></a></li>
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
       <li class="right thin"><a class="title" onclick="toggle_currency();">
         <font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font>
         <font class="paypal-us">CA&nbsp;&#92;&nbsp;<b class="overscore">US</b></font>
@@ -41,7 +41,7 @@
 
     <div class="quote text-center">
       <h1>Magnificent Seven</h1>
-      <h3>Digital Editions<font class="fr">&nbsp;&#92;&nbsp;&Eacute;ditions num&eacute;riques</font></h3>
+      <h3><font class="en">Digital Editions</font><font class="fr">Éditions numériques</font></h3>
 
     </div>
 
@@ -153,49 +153,49 @@
     <section class="product single" id="product-0110">
 
       <div>
-        <h5 class="color tag"><a class="overscore" onclick="toggle_meta();">Digital Paintings</a><font class="fr">&nbsp;&#92;&nbsp;Peintures num&egrave;riques</font></h5>
+        <h5 class="color tag"><a class="overscore" onclick="toggle_meta();"><font class="en">Digital Paintings</font><font class="fr">Peintures numèriques</font></a></h5>
         <div class="clear" id="product-meta">
-          <p class="small">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <i>Last of the Big Tuskers</i> (2018).</p>
+          <p class="small">Art <font class="en">of</font><font class="fr">de</font> <i>Last of the Big Tuskers</i> (2018).</p>
 
         </div>
-        <h5 class="author">Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</h5>
-        <!-- <p>Published in December<font class="fr">&nbsp;&#92;&nbsp;Publi&eacute; en d&eacute;cembre</font> 2018.</p> -->
+        <h5 class="author">Art <font class="en">by</font><font class="fr">par</font> Dane Aleksander.</h5>
+        <!-- <p><font class="en">Published in December</font><font class="fr">Publié en décembre</font> 2018.</p> -->
 
-        <p class="linebreak">The complete collection of digital paintings painted in the making of <i>Last of the Big Tuskers</i> (documentary film, 2018). The collection is made available for download in a range of high-definition resolutions.<font class="fr">&nbsp;&#92;&nbsp;La collection compl&egrave;te de peintures num&eacute;riques peintes lors de la r&eacute;alisation du film documentaire <i>Last of the Big Tuskers</i>. La collection comprend une gamme de r&eacute;solutions.</font></p>
+        <p class="linebreak"><font class="en">The complete collection of digital paintings painted in the making of <i>Last of the Big Tuskers</i> (documentary film, 2018). The collection is made available for download in a range of high-definition resolutions.</font><font class="fr">La collection complète de peintures numériques peintes lors de la réalisation du film documentaire <i>Last of the Big Tuskers</i>. La collection comprend une gamme de résolutions.</font></p>
 
         <!-- fit to the aspect ratio of widescreen monitors and device formats -->
-        <!-- adapt&eacute;es au rapport d'aspect des moniteurs &agrave; &eacute;cran large et des formats d'appareils -->
+        <!-- adaptées au rapport d'aspect des moniteurs à écran large et des formats d'appareils -->
 
-        <!-- <h4 class="in-stock">Magnificent Seven<font class="thin"> &ndash; Download<font class="fr">&nbsp;&#92;&nbsp;T&eacute;l&eacute;chargement</font></font></h4> -->
-        <!-- <p class="stock">Digital download available for purchase with PayPal.<font class="fr">&nbsp;&#92;&nbsp;T&eacute;l&eacute;chargement num&eacute;rique disponible &agrave; l'achat avec PayPal.</font></p> -->
+        <!-- <h4 class="in-stock">Magnificent Seven<font class="thin"> &ndash; <font class="en">Download</font><font class="fr">Téléchargement</font></font></h4> -->
+        <!-- <p class="stock"><font class="en">Digital download available for purchase with PayPal.</font><font class="fr">Téléchargement numérique disponible à l'achat avec PayPal.</font></p> -->
 
       </div>
 
       <div class="clear diptych ptych-fixed">
 
         <div class="clear-bottom">
-          <h5><a class="overscore" onclick="toggle_0110_1111();">Digital Images</a><font class="fr">&nbsp;&#92;&nbsp;num&eacute;riques</font></h5>
+          <h5><a class="overscore" onclick="toggle_0110_1111();"><font class="en">Digital Images</font><font class="fr">Images numériques</font></a></h5>
           <div class="clear" id="product-0110-1111">
             <p><font class="sku small">0110 1111</font></p>
-            <p>Collection of<font class="fr">&nbsp;&#92;&nbsp;de</font> 7.</p>
+            <p>Collection <font class="en">of</font><font class="fr">de</font> 7.</p>
 
           </div>
 
           <p>Dimension: UHD 3840&nbsp;&times;&nbsp;2160 px</p>
           <div class="clear small">
-            <p class="lineend">All included dimensions:<font class="fr">&nbsp;&#92;&nbsp;Toutes les dimensions incluses&nbsp;:</font> UHD,&nbsp;QHD,&nbsp;HD</p>
+            <p class="lineend"><font class="en">All included dimensions:</font><font class="fr">Toutes les dimensions incluses&nbsp;:</font> UHD,&nbsp;QHD,&nbsp;HD</p>
 
           </div>
 
-          <p>File Format:<font class="fr">&nbsp;&#92;&nbsp;Format de fichier&nbsp;:</font> JPG</p>
+          <p><font class="en">File Format:</font><font class="fr">Format de fichier&nbsp;:</font> JPG</p>
 
-          <p class="lineend">Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">7</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">7</font></font></p>
+          <p class="lineend"><font class="en">Price:</font><font class="fr">Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">7</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">7</font></font></p>
 
           <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="YYMLB9P3487MY">
-            <button type="submit" name="submit" alt="Magnificent Seven Digital Edition (Collection)">Purchase<font class="fr">&nbsp;&#92;&nbsp;Acheter<font class="break-cut"> cet article</font></font></button>
+            <button type="submit" name="submit" alt="Magnificent Seven Digital Edition (Collection)"><font class="en">Purchase</font><font class="fr">Acheter<font class="break-cut"> cet article</font></font></button>
 
           </form>
 
@@ -207,7 +207,7 @@
 
           </form>
 
-          <p class="linebreak small">Digital download is made available upon receipt of purchase.<font class="fr">&nbsp;&#92;&nbsp;T&eacute;l&eacute;chargement num&eacute;rique est disponible d&egrave;s la r&eacute;ception de l'achat.</font><sup>&nbsp;[1]</sup></p>
+          <p class="linebreak small"><font class="en">Digital download is made available upon receipt of purchase.</font><font class="fr">Téléchargement numérique est disponible dès la réception de l'achat.</font><sup>&nbsp;[1]</sup></p>
 
         </div>
 
@@ -219,7 +219,7 @@
 
   <footer class="single">
     <div class="quote">
-      <p class="small"><sup>1</sup> Dimension listed in a pixel value (px) is the full resolution of the digital edition. All dimensions listed in &lsquo;All included dimensions&rsquo; are made available for download upon receipt of purchase. For more information, please see the boutique <a href="../../../../c/terms-of-purchase/" target="_blank" title="Animat Habitat &frasl; Terms of Purchase">Terms of Purchase</a>.<font class="fr">&nbsp;&#92;&nbsp;La dimension indiqu&eacute;e dans une valeur de pixel (&nbsp;px&nbsp;) correspond &agrave; la pleine r&eacute;solution de l'&eacute;dition num&eacute;rique. Toutes les dimensions r&eacute;pertori&eacute;es dans &laquo;&nbsp;Toutes les dimensions incluses&nbsp;&raquo; sont mises &agrave; disposition pour t&eacute;l&eacute;chargement d&egrave;s r&eacute;ception de l'achat. Pour en savoir plus, veuillez consulter les conditions d'achat de la boutique.</font></p>
+      <p class="small"><sup>1</sup> <font class="en">Dimension listed in a pixel value (px) is the full resolution of the digital edition. All dimensions listed in &lsquo;All included dimensions&rsquo; are made available for download upon receipt of purchase. <a href="../../../../c/terms-of-purchase/" target="_blank" title="Animat Habitat terms of purchase.">Terms of Purchase</a>.</font><font class="fr">La dimension indiquée dans une valeur de pixel (&nbsp;px&nbsp;) correspond à la pleine résolution de l'édition numérique. Toutes les dimensions répertoriées dans &laquo;&nbsp;Toutes les dimensions incluses&nbsp;&raquo; sont mises à disposition pour téléchargement dès réception de l'achat. <a href="../../../../c/terms-of-purchase/" target="_blank" title="Animat Habitat conditions d'achat.">Conditions d'achat</a>.</font></p>
 
     </div>
 
@@ -348,7 +348,7 @@
       r.style.setProperty('--us', "inline");
       r.style.setProperty('--ca', "none");
       r.style.setProperty('--fr', "none");
-      r.style.setProperty('--fr-en', "inline");
+      r.style.setProperty('--en', "inline");
       toggle_curr = 1;
       toggle_lang = 0;
     }
@@ -364,13 +364,13 @@
       r.style.setProperty('--us', "none");
       r.style.setProperty('--ca', "inline");
       r.style.setProperty('--fr', "inline");
-      r.style.setProperty('--fr-en', "none");
+      r.style.setProperty('--en', "none");
       toggle_curr = 0;
       toggle_lang = 1;
     }
     else {
       r.style.setProperty('--fr', "none");
-      r.style.setProperty('--fr-en', "inline");
+      r.style.setProperty('--en', "inline");
       toggle_lang = 0;
     }
   };
