--- a/boutique/medium/giclee/index.html
+++ b/boutique/medium/giclee/index.html
@@ -7,11 +7,11 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="Art of wild animals to help protect their ecosystems and the biodiversity that cascades from their presence.&nbsp;&#92;&nbsp;L'art des animaux sauvages pour prot&eacute;ger leurs &eacute;cosyst&egrave;mes et la biodiversit&eacute; qui profite de leur pr&eacute;sence." />
+  <meta name="description" content="Art of wild animals to help protect their ecosystems and the biodiversity that cascades from their presence.&nbsp;&#92;&nbsp;L'art des animaux sauvages pour protéger leurs écosystèmes et la biodiversité qui profite de leur présence." />
   <meta name="keywords" content="wildlife art print, wildlife art print canada, wildlife giclee, wildlife giclee canada, giclee shop" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat boutique. Gicl&eacute;e.</title>
+  <title>Animat Habitat boutique. Giclée.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -26,15 +26,15 @@
     <ul class="page">
       <li class="crumb logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb"><a href="../../" title="Animat Habitat boutique.">Boutique</a></li>
-      <li class="crumb active"><a><i>Gicl&eacute;e</i></a></li>
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="crumb active"><a><i>Giclée</i></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
     </ul>
   </nav>
 
   <header>
     <div class="quote text-center">
       <h1 class="title"><a href="../../" title="Animat Habitat boutique."><font class="color-reset">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></a></h1>
-      <h3>Gicl&eacute;e Prints<font class="fr">&nbsp;&#92;&nbsp;Gicl&eacute;es</font></h3>
+      <h3><font class="en">Giclée Prints</font><font class="fr">Giclées</font></h3>
 
     </div>
 
@@ -43,7 +43,7 @@
   <section class="single">
     <article>
       <div class="term-description">
-        <p>Limited edition archival pigment prints are numbered and are signed by Dane Aleksander. Open edition archival pigment prints are not numbered and are not signed. Fifty (50) per cent of the purchase price of each limited or open edition gicl&eacute;e is redirected to wildlife conservation projects in association with scenes at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Tirages pigmentaires d'archives en &eacute;dition limit&eacute;e sont num&eacute;rot&eacute;s et sont sign&eacute;s par Dane Aleksander. Tirages pigmentaires d'archives en &eacute;dition ouverte ne sont pas num&eacute;rot&eacute;s et ne sont pas sign&eacute;s. Cinquante pour cent du prix d'achat de chaque gicl&eacute;e en &eacute;dition limit&eacute;e ou ouverte est redirig&eacute; aux projets de conservation de la nature en association avec les sc&egrave;nes chez Animat Habitat.</font></p>
+        <p><font class="en">Limited edition archival pigment prints are numbered and are signed by Dane Aleksander. Open edition archival pigment prints are not numbered and are not signed. Fifty (50) per cent of the purchase price of each limited or open edition giclée is redirected to wildlife conservation projects in association with scenes at Animat Habitat.</font><font class="fr">Tirages pigmentaires d'archives en édition limitée sont numérotés et sont signés par Dane Aleksander. Tirages pigmentaires d'archives en édition ouverte ne sont pas numérotés et ne sont pas signés. Cinquante pour cent du prix d'achat de chaque giclée en édition limitée ou ouverte est redirigé aux projets de conservation de la nature en association avec les scènes chez Animat Habitat.</font></p>
       </div>
 
     </article><br class="clear">
@@ -156,13 +156,13 @@
 
   <footer class="single">
     <div class="quote">
-      <!-- <p class="small"><sup>1</sup> <i>Last of the Big Tuskers</i> (2018)&mdash;art of the film collection is a limited edition run of one hundred (100) numbered gicl&eacute;e prints.<font class="fr">&nbsp;&#92;&nbsp;La collection d'art du film est une s&eacute;rie en &eacute;dition limit&eacute;e d'une centaine de tirages gicl&eacute;es.</font></p> -->
+      <!-- <p class="small"><sup>1</sup> <font class="en"><i>Last of the Big Tuskers</i> (2018)&mdash;art of the film collection is a limited edition run of one hundred (100) numbered giclée prints.</font><font class="fr">La collection d'art du film est une série en édition limitée d'une centaine de tirages giclées.</font></p> -->
 
       <!-- Fine art print, printed on acid-free archival paper with unprinted / white borders around the edge for safe handling and to allow for framing options after delivery to you. -->
 
       <!-- If you are interested in a custom print, please contact account office at Animat Habitat, for a quote based on the specific requirements. -->
 
-      <p class="linebreak small">Copyright &copy; 2018-2025 Animat Habitat. <a href="../../../c/" target="_blank" title="Animat Habitat &frasl; Terms of Access">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'access.</font></p>
+      <p class="linebreak small">Copyright &copy; 2018-2025 Animat Habitat. <a href="../../../c/" target="_blank" title="Animat Habitat terms of access."><font class="en">Terms of Access</font><font class="fr">Conditions d'access</font></a>.</p>
 
     </div>
 
@@ -180,12 +180,12 @@
   function toggle_language() {
     if ( toggle_lang == 0 ) {
       r.style.setProperty('--fr', "inline");
-      r.style.setProperty('--fr-en', "none");
+      r.style.setProperty('--en', "none");
       toggle_lang = 1;
     }
     else {
       r.style.setProperty('--fr', "none");
-      r.style.setProperty('--fr-en', "inline");
+      r.style.setProperty('--en', "inline");
       toggle_lang = 0;
     }
   };
