--- a/boutique/medium/giclee/satao/index.html
+++ b/boutique/medium/giclee/satao/index.html
@@ -7,11 +7,11 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="Art of wild animals to help protect their ecosystems and the biodiversity that cascades from their presence.&nbsp;&#92;&nbsp;L'art des animaux sauvages pour prot&eacute;ger leurs &eacute;cosyst&egrave;mes et la biodiversit&eacute; qui profite de leur pr&eacute;sence." />
+  <meta name="description" content="Art of wild animals to help protect their ecosystems and the biodiversity that cascades from their presence.&nbsp;&#92;&nbsp;L'art des animaux sauvages pour protéger leurs écosystèmes et la biodiversité qui profite de leur présence." />
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat boutique. Gicl&eacute;e. Last of the Big Tuskers &ndash;&nbsp;Satao (2018).</title>
+  <title>Animat Habitat boutique. Giclée. Last of the Big Tuskers &ndash;&nbsp;Satao, 2018.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../../inc/css/dark.light.unicorn.css" />
@@ -26,9 +26,9 @@
     <ul class="page">
       <li class="crumb logo"><a href="../../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb"><a href="../../../" title="Animat Habitat boutique.">Boutique</a></li>
-      <li class="crumb"><a href="../" title="Animat Habitat boutique. Gicl&eacute;e.">Gicl&eacute;e</a></li>
+      <li class="crumb"><a href="../" title="Animat Habitat boutique. Giclée.">Giclée</a></li>
       <li class="crumb active"><a><i>Satao</i></a></li>
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
       <li class="right thin"><a class="title" onclick="toggle_currency();">
         <font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font>
         <font class="paypal-us">CA&nbsp;&#92;&nbsp;<b class="overscore">US</b></font>
@@ -41,7 +41,7 @@
 
     <div class="quote text-center">
       <h1>Satao</h1>
-      <h3>Gicl&eacute;e Prints<font class="fr">&nbsp;&#92;&nbsp;Gicl&eacute;es</font></h3>
+      <h3><font class="en">Giclée Prints</font><font class="fr">Giclées</font></h3>
 
     </div>
 
@@ -75,39 +75,42 @@
     <section class="product single" id="product-0115">
 
       <div>
-        <h5 class="color tag"><a class="overscore" onclick="toggle_meta();">Digital Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture num&egrave;rique</font></h5>
+        <h5 class="color tag"><a class="overscore" onclick="toggle_meta();"><font class="en">Digital Painting</font><font class="fr">Peinture numèrique</font></a></h5>
         <div class="clear" id="product-meta">
-          <p class="small">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <i>Last of the Big Tuskers</i> (2018).</p>
+          <p class="small">Art <font class="en">of</font><font class="fr">de</font> <i>Last of the Big Tuskers</i> (<font class="fr">&nbsp;</font>2018<font class="fr">&nbsp;</font>).</p>
 
         </div>
-        <h5 class="author">Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</h5>
-        <p>Printed in Canada with archival pigment on acid-free archival paper.<font class="fr">&nbsp;&#92;&nbsp;Tirage pigmentaire d'archivage sur papier d'archivage sans acide imprim&eacute; au Canada.</font></p>
+        <h5 class="author">Art <font class="en">by</font><font class="fr">par</font> Dane Aleksander.</h5>
+        <p><font class="en">Printed in Canada with archival pigment on acid-free archival paper.</font><font class="fr">Tirage pigmentaire d'archivage sur papier d'archivage sans acide imprimé au Canada.</font></p>
 
-        <p class="linebreak">&ldquo;Satao&rdquo; is one of a collection of digital paintings painted in the making of <i>Last of the Big Tuskers</i> (documentary film, 2018). This collection of digital paintings is printed in limited edition as archival pigment printson acid-free archival paper, and printed with a half-inch unprinted matte to allow for framing options and safe handling. The archival pigment prints are available in two sizes.<font class="fr">&nbsp;&#92;&nbsp;&laquo;&nbsp;Satao&nbsp;&raquo; fait partie d'une collection de peintures num&eacute;riques peintes lors de la r&eacute;alisation du film documentaire <i>Last of the Big Tuskers</i>. Cette peinture num&eacute;rique est imprim&eacute; en &eacute;dition limit&eacute;e en tant que tirages pigmentaires d'archives sur papier d'archivage sans acide, et c'est imprim&eacute; avec une mate de demi-pouce non imprim&eacute;e pour permettre une manipulation en toute s&eacute;curit&eacute; ainsi que des options de cadrage. Les tirages pigmentaires d'archives sont disponibles en deux tailles.</font></p>
+        <p class="linebreak">
+          <font class="en">&ldquo;Satao&rdquo; is one of a collection of digital paintings painted in the making of <i>Last of the Big Tuskers</i> (documentary film, 2018). This collection of digital paintings is printed in limited edition as archival pigment printson acid-free archival paper, and printed with a half-inch unprinted matte to allow for framing options and safe handling. The archival pigment prints are available in two sizes.</font>
+          <font class="fr">&laquo;&nbsp;Satao&nbsp;&raquo; fait partie d'une collection de peintures numériques peintes lors de la réalisation du film documentaire <i>Last of the Big Tuskers</i>. Cette peinture numérique est imprimé en édition limitée en tant que tirages pigmentaires d'archives sur papier d'archivage sans acide, et c'est imprimé avec une mate de demi-pouce non imprimée pour permettre une manipulation en toute sécurité ainsi que des options de cadrage. Les tirages pigmentaires d'archives sont disponibles en deux tailles.</font>
+        </p>
 
       </div>
 
       <div class="clear diptych ptych-fixed">
 
         <div class="clear-bottom">
-          <h5><a class="overscore" onclick="toggle_0115_1111();">Limited Edition Gicl&eacute;e</a><font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
+          <h5><a class="overscore" onclick="toggle_0115_1111();"><font class="en">Limited Edition Giclée</font><font class="fr">Giclée en édition limitée</font></a></h5>
           <div class="clear" id="product-0115-1111">
             <p><font class="sku small">0115 1111</font></p>
-            <p>Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 100.</p>
+            <p><font class="en">Edition of</font><font class="fr">Édition de</font> 100.</p>
 
           </div>
 
-          <p>Dimension: 12&nbsp;&times;&nbsp;8 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
+          <p>Dimension: 12&nbsp;&times;&nbsp;8 <font class="en">in</font><font class="fr">po</font></p>
           <div class="clear small">
-            <p>Matte:<font class="fr">&nbsp;&#92;&nbsp;Cache&nbsp;:</font> 0.5 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
-            <p class="lineend">Print:<font class="fr">&nbsp;&#92;&nbsp;Impression&nbsp;:</font> 11&nbsp;&times;&nbsp;7 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
+            <p><font class="en">Matte:</font><font class="fr">Cache&nbsp;:</font> 0.5 <font class="en">in</font><font class="fr">po</font></p>
+            <p class="lineend"><font class="en">Print:</font><font class="fr">Impression&nbsp;:</font> 11&nbsp;&times;&nbsp;7 <font class="en">in</font><font class="fr">po</font></p>
 
           </div>
 
-          <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">100</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">125</font></font><sup>&nbsp;[<a class="button" onclick="fn();" title="Donation">1</a>]</sup></p>
+          <p><font class="en">Price:</font><font class="fr">Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">100</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">125</font></font><sup>&nbsp;[<a class="button" onclick="fn();" title="Donation">1</a>]</sup></p>
 
           <div class="clear paypal-ca">
-            <p class="lineend small">Shipping within Canada is included.<font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition au Canada est incluse.</font></p>
+            <p class="lineend small"><font class="en">Shipping within Canada is included.</font><font class="fr">L'expédition au Canada est incluse.</font></p>
 
           </div>
 
@@ -128,7 +131,7 @@
             </select>
 
             <input type="hidden" name="currency_code" value="CAD">
-            <button type="submit" name="submit" alt="Satao [12&nbsp;&times;&nbsp;8] (Gicl&eacute;e)">Purchase<font class="fr">&nbsp;&#92;&nbsp;Acheter<font class="break-cut"> cet article</font></font></button>
+            <button type="submit" name="submit" alt="Satao [12&nbsp;&times;&nbsp;8] (Giclée)"><font class="en">Purchase</font><font class="fr">Acheter cet article</font></button>
 
           </form>
 
@@ -138,36 +141,36 @@
             <input type="hidden" name="hosted_button_id" value="SCY43WDEDM3PL">
 
             <input type="hidden" name="currency_code" value="USD">
-            <button type="submit" name="submit" alt="Satao [12&nbsp;&times;&nbsp;8] (Gicl&eacute;e)">Purchase</button>
+            <button type="submit" name="submit" alt="Satao [12&nbsp;&times;&nbsp;8] (Giclée)">Purchase</button>
 
           </form>
 
           <div class="clear paypal-ca">
-            <p class="linebreak small">Select the <u>International</u> option for shipping outside Canada.<font class="fr">&nbsp;&#92;&nbsp;Veuillez s&eacute;lectionner l'option <u>Internationale</u> pour l'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada.</font><sup>&nbsp;[<a class="button" onclick="fn();" title="Terms of Purchase">2</a>]</sup></p>
+            <p class="linebreak small"><font class="en">Select the <u>International</u> option for shipping outside Canada.</font><font class="fr">Veuillez sélectionner l'option <u>Internationale</u> pour l'expédition à l'extérieur du Canada.</font><sup>&nbsp;[<a class="button" onclick="fn();" title="Terms of Purchase">2</a>]</sup></p>
 
           </div>
 
         </div>
 
         <div class="clear-bottom">
-          <h5><a class="overscore" onclick="toggle_0115_1121();">Limited Edition Gicl&eacute;e</a><font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
+          <h5><a class="overscore" onclick="toggle_0115_1121();"><font class="en">Limited Edition Giclée</font><font class="fr">Giclée en édition limitée</font></a></h5>
           <div class="clear" id="product-0115-1121">
             <p><font class="sku small">0115 1121</font></p>
-            <p>Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 10.</p>
+            <p><font class="en">Edition of</font><font class="fr">Édition de</font> 10.</p>
 
           </div>
 
-          <p>Dimension: 18&nbsp;&times;&nbsp;12 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
+          <p>Dimension: 18&nbsp;&times;&nbsp;12 <font class="en">in</font><font class="fr">po</font></p>
           <div class="clear small">
-            <p>Matte:<font class="fr">&nbsp;&#92;&nbsp;Cache&nbsp;:</font> 0.5 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
-            <p class="lineend">Print:<font class="fr">&nbsp;&#92;&nbsp;Impression&nbsp;:</font> 17&nbsp;&times;&nbsp;11 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
+            <p><font class="en">Matte:</font><font class="fr">Cache&nbsp;:</font> 0.5 <font class="en">in</font><font class="fr">po</font></p>
+            <p class="lineend"><font class="en">Print:</font><font class="fr">Impression&nbsp;:</font> 17&nbsp;&times;&nbsp;11 <font class="en">in</font><font class="fr">po</font></p>
 
           </div>
 
-          <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">200</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">200</font></font><sup>&nbsp;[<a class="button" onclick="fn();" title="Donation">1</a>]</sup></p>
+          <p><font class="en">Price:</font><font class="fr">Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">200</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">200</font></font><sup>&nbsp;[<a class="button" onclick="fn();" title="Donation">1</a>]</sup></p>
 
           <div class="clear paypal-ca">
-            <p class="lineend small">Shipping within Canada is included.<font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition au Canada est incluse.</font></p>
+            <p class="lineend small"><font class="en">Shipping within Canada is included.</font><font class="fr">L'expédition au Canada est incluse.</font></p>
 
           </div>
 
@@ -188,7 +191,7 @@
             </select>
 
             <input type="hidden" name="currency_code" value="CAD">
-            <button type="submit" name="submit" alt="Satao [18&nbsp;&times;&nbsp;12] (Gicl&eacute;e)">Purchase<font class="fr">&nbsp;&#92;&nbsp;Acheter<font class="break-cut"> cet article</font></font></button>
+            <button type="submit" name="submit" alt="Satao [18&nbsp;&times;&nbsp;12] (Giclée)"><font class="en">Purchase</font><font class="fr">Acheter cet article</font></button>
 
           </form>
 
@@ -198,12 +201,12 @@
             <input type="hidden" name="hosted_button_id" value="S6L58DPJBTG2E">
 
             <input type="hidden" name="currency_code" value="USD">
-            <button type="submit" name="submit" alt="Satao [18&nbsp;&times;&nbsp;12] (Gicl&eacute;e)">Purchase</button>
+            <button type="submit" name="submit" alt="Satao [18&nbsp;&times;&nbsp;12] (Giclée)">Purchase</button>
 
           </form>
 
           <div class="clear paypal-ca">
-            <p class="linebreak small">Select the <u>International</u> option for shipping outside Canada.<font class="fr">&nbsp;&#92;&nbsp;Veuillez s&eacute;lectionner l'option <u>Internationale</u> pour l'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada.</font><sup>&nbsp;[<a class="button" onclick="fn();" title="Terms of Purchase">2</a>]</sup></p>
+            <p class="linebreak small"><font class="en">Select the <u>International</u> option for shipping outside Canada.</font><font class="fr">Veuillez sélectionner l'option <u>Internationale</u> pour l'expédition à l'extérieur du Canada.</font><sup>&nbsp;[<a class="button" onclick="fn();" title="Terms of Purchase">2</a>]</sup></p>
 
           </div>
 
@@ -217,8 +220,8 @@
 
   <footer class="single" id="footnotes">
     <div class="quote">
-      <p class="small"><sup>1</sup> Fifty (50) per cent of the purchase price is redirected to wildlife conservation projects in elephant range States in Africa in association with scene one at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Cinquante pour cent du prix d'achat est affect&eacute; &agrave; des projets de conservation de la nature dans les &Eacute;tats de l'aire de r&eacute;partition des &eacute;l&eacute;phants en Afrique en association avec la premi&egrave;re sc&egrave;ne chez Animat Habitat.</font></p>
-      <p class="small"><sup>2</sup> International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat &frasl; Terms of Purchase">Terms of Purchase</a>.<font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada est limit&eacute;e aux pays r&eacute;pertori&eacute;s comme disponibles pour l'exp&eacute;dition international dans les conditions d'achat de la boutique.</font></p>
+      <p class="small"><sup>1</sup> <font class="en">Fifty (50) per cent of the purchase price is redirected to wildlife conservation projects in elephant range States in Africa in association with scene one at Animat Habitat.</font><font class="fr">Cinquante pour cent du prix d'achat est affecté à des projets de conservation de la nature dans les États de l'aire de répartition des éléphants en Afrique en association avec la première scène chez Animat Habitat.</font></p>
+      <p class="small"><sup>2</sup> <font class="en">International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat terms of purchase.">Terms of Purchase</a>.</font><font class="fr">L'expédition à l'extérieur du Canada est limitée aux pays répertoriés comme disponibles pour l'expédition international dans les <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat conditions d'achat.">conditions d'achat</a> de la boutique.</font></p>
 
     </div>
   </footer>
@@ -288,7 +291,7 @@
       r.style.setProperty('--us', "inline");
       r.style.setProperty('--ca', "none");
       r.style.setProperty('--fr', "none");
-      r.style.setProperty('--fr-en', "inline");
+      r.style.setProperty('--en', "inline");
       toggle_curr = 1;
       toggle_lang = 0;
     }
@@ -304,13 +307,13 @@
       r.style.setProperty('--us', "none");
       r.style.setProperty('--ca', "inline");
       r.style.setProperty('--fr', "inline");
-      r.style.setProperty('--fr-en', "none");
+      r.style.setProperty('--en', "none");
       toggle_curr = 0;
       toggle_lang = 1;
     }
     else {
       r.style.setProperty('--fr', "none");
-      r.style.setProperty('--fr-en', "inline");
+      r.style.setProperty('--en', "inline");
       toggle_lang = 0;
     }
   };
