--- a/conservation/index.html
+++ b/conservation/index.html
@@ -7,7 +7,7 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="Platform for the conservation of endangered species and their natural habitats.&nbsp;&#92;&nbsp;Plateforme de conservation des esp&egrave;ces en p&eacute;ril et de leurs habitats naturels." />
+  <meta name="description" content="Platform for the conservation of endangered species and their natural habitats.&nbsp;&#92;&nbsp;Plateforme de conservation des espèces en péril et de leurs habitats naturels." />
   <meta name="keywords" content="wildlife conservation, habitat conservation, habitat africa, habitat america, habitat canada" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -33,9 +33,7 @@
     <ul class="page">
       <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb active"><a><i>Conservation</i></a></li>
-      <!-- <li class="crumb btn"><a href="africa-afrique/" title="Animat Habitat conservation. Africa, Afrique.">Afr</a></li> -->
-      <!-- <li class="crumb btn"><a href="america-amerique/north-nord/" title="Animat Habitat conservation. Turtle Island, L'&Icirc;le de la Tortue.">N&nbsp;A</a></li> -->
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat / Conservation"><font class="en">fr</font><font class="fr">en</font></a></li>
     </ul>
   </nav>
 
@@ -43,10 +41,11 @@
     <div class="quote text-center">
       <h1 class="title"><font class="color-reset">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></h1>
       <h3>
+        <font class="en"><a class="overscore" href="africa/" title="Animat Habitat conservation. Africa">Africa</a></font>
+        <font class="fr"><a class="overscore" href="afrique/" title="Animat Habitat conservation. Afrique">Afrique</a></font> &middot;
 
-        <a href="africa-afrique/" title="Animat Habitat conservation. Africa, Afrique."><font class="overscore">Africa</font></a><font class="fr">&nbsp;&#92;&nbsp;Afrique</font> &middot;
-
-        <a href="turtle-island-ile-de-la-tortue/" title="Animat Habitat conservation. Turtle Island, L'&icirc;le de la Tortue."><font class="overscore">North&nbsp;America</font></a><font class="fr">&nbsp;&#92;&nbsp;Am&egrave;rique&nbsp;du&nbsp;Nord</font>
+        <font class="en"><a class="overscore" href="turtle-island/" title="Animat Habitat conservation. Turtle Island">North&nbsp;America</a></font>
+        <font class="fr"><a class="overscore" href="ile-de-la-tortue/" title="Animat Habitat conservation. Île de la Tortue.">Amèrique&nbsp;du&nbsp;Nord</a></font>
 
       </h3>
 
@@ -59,7 +58,7 @@
 
       <div class="text-center">
 
-        <h5 class="small letterhead">&plus; International Activism<font class="fr">&nbsp;&#92;&nbsp;Activisme international</font></h5>
+        <h5 class="small letterhead">&plus; <font class="en">International Activism</font><font class="fr">Activisme international</font></h5>
 
         <h5 class="title">
 
@@ -73,7 +72,7 @@
 
         </h5>
 
-        <h5 class="small linebreak">&plus; International Conventions<font class="fr">&nbsp;&#92;&nbsp;internationaux</font></h5>
+        <h5 class="small linebreak">&plus; <font class="en">International Conventions</font><font class="fr">Conventions internationaux</font></h5>
 
         <h5 class="title">
 
@@ -87,7 +86,7 @@
 
         </h5>
 
-        <h5 class="small linebreak">&plus; International Union<font class="fr">&nbsp;&#92;&nbsp;internationale</font></h5>
+        <h5 class="small linebreak">&plus; <font class="en">International Union</font><font class="fr">Union internationale</font></h5>
 
         <h5 class="title">
 
@@ -118,12 +117,12 @@
   function toggle_language() {
     if ( toggle_lang == 0 ) {
       r.style.setProperty('--fr', "inline");
-      r.style.setProperty('--fr-en', "none");
+      r.style.setProperty('--en', "none");
       toggle_lang = 1;
     }
     else {
       r.style.setProperty('--fr', "none");
-      r.style.setProperty('--fr-en', "inline");
+      r.style.setProperty('--en', "inline");
       toggle_lang = 0;
     }
   };
