--- a/patron/confirmation/index.html
+++ b/patron/confirmation/index.html
@@ -26,7 +26,7 @@
     <ul class="page">
       <li class="crumb logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb active"><a><i>Patron</i></a></li>
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
     </ul>
   </nav>
 
@@ -34,18 +34,18 @@
     <article>
 
       <div>
-        <h3 class="letterhead">Thanks for your donation!<font class="fr">&nbsp;&#92;&nbsp;Merci pour voter don&nbsp;!</font></h3>
+        <h3 class="letterhead"><font class="en">Thanks for your donation!</font><font class="fr">Merci pour voter don&nbsp;!</font></h3>
 
-        <h5 class="linebreak">Welcome among patrons of the scenes in wildlife art at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Bienvenue parmi les patrons des sc&egrave;nes d'art de la nature chez Animat Habiat.</font></h5>
-        <p>For active and select council members, you can find documents of the organization archived and classified in the Animat Habitat <a href="../../s/" title="Animat Habitat member handbook.">Member Handbook</a>. For members of a project broadcast, a behind-the-scenes campaign will be delivered to your inbox in advance of project publications. You can find articles at Animat Habitat archived on the project pages.<font class="fr">&nbsp;&#92;&nbsp;Pour les membres actifs, retrouvez les documents d'organisation archiv&eacute;s et class&eacute;s dans le manuel des membres Animat Habitat. Pour les membres des mises &agrave; jour d'un projet, la campagne dans les coulisses sera livr&eacute;e &agrave; votre address e-mail en avance de la publication du projet. Veuillez trouver les articles chez Animat Habitat archiv&eacute;s sur les pages du projet.</font></p>
+        <h5 class="linebreak"><font class="en">Welcome among patrons of the scenes in wildlife art at Animat Habitat.</font><font class="fr">Bienvenue parmi les patrons des scènes d'art de la nature chez Animat Habiat.</font></h5>
+        <p><font class="en">For active and select council members, you can find documents of the organization archived and classified in the Animat Habitat <a href="../../s/" title="Animat Habitat member handbook, manuel des membres.">Member Handbook</a>. For members of a project broadcast, a behind-the-scenes campaign will be delivered to your inbox in advance of project publications. You can find articles at Animat Habitat archived on the project pages.</font><font class="fr">Pour les membres actifs, retrouvez les documents d'organisation archivés et classés dans le <a href="../../s/" title="Animat Habitat member handbook, manuel des membres.">manuel des membres</a> Animat Habitat. Pour les membres des mises à jour d'un projet, la campagne dans les coulisses sera livrée à votre address e-mail en avance de la publication du projet. Veuillez trouver les articles chez Animat Habitat archivés sur les pages du projet.</font></p>
 
         <h5 class="linebreak title"><font class="color-one">I. White Elephant</font></h5>
-        <p>Animat Habitat <a href="../../scene/one/" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">Scene One</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un</font></p>
-        <p>Animat Habitat Scene One &ndash; <a href="../../scene/one/making-of-ella/" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un. Making of Ella, 1.">Making of Ella</a> &hellip;</p>
+        <p>Animat Habitat <a href="../../scene/one/" title="Animat Habitat scene one, scène un."><font class="en">Scene One</font><font class="fr">Scène un</font></a></p>
+        <p>Animat Habitat <font class="en">Scene One</font><font class="fr">Scène un</font> &ndash; <a href="../../scene/one/making-of-ella/" title="Animat Habitat scene one, scène un. Making of Ella, 1.">Making of Ella</a> &hellip;</p>
 
         <h5 class="linebreak title"><font class="color-two">II. White Tiger</font></h5>
-        <p>Animat Habitat <a href="../../scene/two/" title="Animat Habitat scene two. &verbar;&nbsp;sc&egrave;ne deux.">Scene Two</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux</font></p>
-        <p>Animat Habitat Scene Two &ndash; <a href="../../scene/two/the-beginning-of-painting/" title="Animat Habitat scene two. &verbar;&nbsp;sc&egrave;ne deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
+        <p>Animat Habitat <a href="../../scene/two/" title="Animat Habitat scene two, scène deux."><font class="en">Scene Two</font><font class="fr">Scène deux</font></a></p>
+        <p>Animat Habitat Scene Two &ndash; <a href="../../scene/two/the-beginning-of-painting/" title="Animat Habitat scene two, scène deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
 
       </div>
 
@@ -54,9 +54,9 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Thanks again for your support.<font class="fr">&nbsp;&#92;&nbsp;Merci encore pour votre soutien.</font></p>
+      <p class="small"><font class="en">Thanks again for your support.</font><font class="fr">Merci encore pour votre soutien.</font></p>
 
-      <p class="linebreak small">Exit through the <a href="../../boutique/" title="Animat Habitat boutique.">Boutique</a>.<font class="fr">&nbsp;&#92;&nbsp;Sortir par la boutique.</font></p>
+      <p class="linebreak small"><font class="en">Exit through the <a href="../../boutique/" title="Animat Habitat boutique.">Boutique</a>.</font><font class="fr"><a href="../../boutique/" title="Animat Habitat boutique.">Sortir par la boutique</a>.</font></p>
     </div>
 
   </footer>
@@ -73,12 +73,12 @@
   function toggle_language() {
     if ( toggle_lang == 0 ) {
       r.style.setProperty('--fr', "inline");
-      r.style.setProperty('--fr-en', "none");
+      r.style.setProperty('--en', "none");
       toggle_lang = 1;
     }
     else {
       r.style.setProperty('--fr', "none");
-      r.style.setProperty('--fr-en', "inline");
+      r.style.setProperty('--en', "inline");
       toggle_lang = 0;
     }
   };
