--- a/scene/one/book-of-ella-4/index.html
+++ b/scene/one/book-of-ella-4/index.html
@@ -29,7 +29,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one, scène un.">I</a></li>
       <li class="crumb scene color"><a><i>Book of Ella Ch&nbsp;4</i></a></li>
     </ul>
   </nav>
@@ -90,6 +90,8 @@
       <div>
         <h3 class="linebreak">Designing with Color and Light</h3>
         <p>A colorscript communicates the visual tone&mdash;the emotion, the mood, the lighting and timing (of day) and so on. This bit of art direction provides a narrative road-map mapped onto a single document so that every artist has a clear picture of the arc of each sequence. That single document underpins the consistent use of color across a motion picture. A lesson from a master of color and light &ndash; a DreamWorks Animation background artist on <i>Prince of Egypt</i> (1998), <i>The Road to El Dorado</i> (2000) and <i>Sinbad: Legend of the Seven Seas</i> (2003) &ndash; Nathan Fowkes:</p>
+
+        <!-- Provide tone, mood, color ideas costuming ideas, setting ideas, and a continuity of that - not just the mood of a scene but how it interrelated to the overall picture, and the characters and the emotions of the characters. -->
 
         <div>
           <p><b class="color">&ldquo;</b>Color carries with it a tremendous emotional impact. [&hellip;] Different kinds of color harmonies elicit a variety of moods. [&hellip;] [An artist has] to learn to think of color, and to design color, in terms of contrast, and that's why the color wheel is a useful tool because the color wheel arranges colors in terms of how they contrast with each other. [&hellip;] If you don't design, you've missed an opportunity.<b class="color">&rdquo;</b></p>
