--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -7,7 +7,7 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="White Tiger&mdash;oil painting of a tiger in the taiga.&nbsp;&#92;&nbsp;Tigre blanc &mdash; peinture &agrave; l’huile d’un tigre dans la ta&iuml;ga." />
+  <meta name="description" content="White Tiger&mdash;oil painting of a tiger in the taiga.&nbsp;&#92;&nbsp;Tigre blanc &mdash; peinture à l’huile d’un tigre dans la ta&iuml;ga." />
   <meta name="keywords" content="white tiger, tiger painting, tiger art, tiger conservation art, taiga" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -33,7 +33,7 @@
     <ul class="page">
       <li class="crumb logo color"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Two) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.two.svg"/></a></li>
       <li class="crumb scene color"><a><i>White Tiger</i></a></li>
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
       <li class="right thin" id="currency"><a class="title" onclick="toggle_currency();"><font class="color-reset">
         <font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font>
         <font class="paypal-us">CA&nbsp;&#92;&nbsp;<b class="overscore">US</b></font>
@@ -45,9 +45,9 @@
   <header>
     <div class="quote text-center">
       <h1 class="title">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></h1>
-      <h3>Scene two:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux&nbsp;:</font></h3>
+      <h3>Scene two:<font class="fr">&nbsp;&#92;&nbsp;Scène deux&nbsp;:</font></h3>
       <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace"> </font><font class="thin">Tiger</font></a></h1>
-      <h3><font class="color-reset">Exhibition of art to change the way we look at wildlife.<font class="fr"><br>Exposition d'art pour changer la fa&ccedil;on dont nous regardons la nature.</font></font></h3>
+      <h3><font class="color-reset">Exhibition of art to change the way we look at wildlife.<font class="fr"><br>Exposition d'art pour changer la façon dont nous regardons la nature.</font></font></h3>
     </div>
   </header>
 
@@ -68,14 +68,14 @@
     <section class="product single" id="scene">
 
       <div>
-        <h5 class="color"><a class="color overscore" onclick="toggle_meta();">Oil Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
+        <h5 class="color"><a class="color overscore" onclick="toggle_meta();">Oil Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture à l'huile</font></h5>
         <div class="clear" id="product-meta">
-          <p class="small">Painted with Gamblin artists colors on linen canvas. Created in Canada.<font class="fr">&nbsp;&#92;&nbsp;Peint avec des couleurs d'artistes Gamblin sur toile de lin. Cr&eacute;&eacute; au Canada.</font></p>
+          <p class="small">Painted with Gamblin artists colors on linen canvas. Created in Canada.<font class="fr">&nbsp;&#92;&nbsp;Peint avec des couleurs d'artistes Gamblin sur toile de lin. Créé au Canada.</font></p>
           <h5 class="author">Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</h5>
 
         </div>
 
-        <p class="linebreak"><i>White Tiger</i> is an oil painting of an Amur tiger in the taiga. This publication is second in a series of scenes in wildlife art at Animat Habitat. The original painting is photographed and reproduced in limited edition as an archival pigment print on acid-free archival paper, and printed with an inch unprinted matte to allow for framing options and safe handling. The archival pigment prints are available for pre-order in two sizes. A digital copy of the corrected and edited photograph is also available for pre-order.<font class="fr">&nbsp;&#92;&nbsp;<i>Tigre blanc</i> est une peinture &agrave; l'huile d’un tigre dans la ta&iuml;ga. Cette publication est la deuxi&egrave;me d'une s&eacute;rie de projets chez Animat Habitat. La peinture originale est photographi&eacute;e et reproduite en &eacute;dition limit&eacute;e en tant que tirage pigmentaire d'archives sur du papier d'archivage sans acide, et imprim&eacute;e avec une mate d'un pouce non imprim&eacute;e pour permettre une manipulation en toute s&eacute;curit&eacute; ainsi que des options d'encadrement. Les tirages pigmentaires d'archives sont disponibles en deux tailles. Une copie num&eacute;rique de la photo corrig&eacute;e et &eacute;dit&eacute;e est &eacute;galement disponible.</font></p>
+        <p class="linebreak"><i>White Tiger</i> is an oil painting of an Amur tiger in the taiga. This publication is second in a series of scenes in wildlife art at Animat Habitat. The original painting is photographed and reproduced in limited edition as an archival pigment print on acid-free archival paper, and printed with an inch unprinted matte to allow for framing options and safe handling. The archival pigment prints are available for pre-order in two sizes. A digital copy of the corrected and edited photograph is also available for pre-order.<font class="fr">&nbsp;&#92;&nbsp;<i>Tigre blanc</i> est une peinture à l'huile d’un tigre dans la ta&iuml;ga. Cette publication est la deuxième d'une série de projets chez Animat Habitat. La peinture originale est photographiée et reproduite en édition limitée en tant que tirage pigmentaire d'archives sur du papier d'archivage sans acide, et imprimée avec une mate d'un pouce non imprimée pour permettre une manipulation en toute sécurité ainsi que des options d'encadrement. Les tirages pigmentaires d'archives sont disponibles en deux tailles. Une copie numérique de la photo corrigée et éditée est également disponible.</font></p>
 
         <p class="linebreak">Exhibition Date:<font class="fr">&nbsp;&#92;&nbsp;Date d'exposition&nbsp;:</font> &ndash;</p>
 
@@ -84,7 +84,7 @@
       <div class="clear diptych ptych-fixed">
 
         <div>
-          <h5><a class="overscore" onclick="toggle_0200_0011();">Oil Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
+          <h5><a class="overscore" onclick="toggle_0200_0011();">Oil Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture à l'huile</font></h5>
           <div class="clear small" id="product-0200-0011">
             <p><font class="sku">0200 0011</font></p>
 
@@ -95,7 +95,7 @@
         </div>
 
         <div>
-          <h5><a class="overscore" onclick="toggle_0201_0111();">Digital Image</a><font class="fr">&nbsp;&#92;&nbsp;num&eacute;rique</font></h5>
+          <h5><a class="overscore" onclick="toggle_0201_0111();">Digital Image</a><font class="fr">&nbsp;&#92;&nbsp;numérique</font></h5>
           <div class="clear small" id="product-0201-0111">
             <p><font class="sku">0201 0111</font></p>
 
@@ -107,10 +107,10 @@
         </div>
 
         <div class="clear-bottom">
-          <h5><a class="overscore" onclick="toggle_0201_1111();">Limited Edition Gicl&eacute;e</a><font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
+          <h5><a class="overscore" onclick="toggle_0201_1111();">Limited Edition Giclée</a><font class="fr">&nbsp;&#92;&nbsp;en édition limitée</font></h5>
           <div class="clear" id="product-0201-1111">
             <p><font class="sku small">0201 1111</font></p>
-            <p>Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 250.</p>
+            <p>Edition of<font class="fr">&nbsp;&#92;&nbsp;Édition de</font> 250.</p>
 
           </div>
           <p>Dimension: 12&nbsp;&times;&nbsp;8 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
@@ -121,7 +121,7 @@
           <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">100</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">125</font></font></p>
 
           <div class="clear paypal-ca">
-            <p class="lineend small">Shipping within Canada is included.<font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition au Canada est incluse.</font></p>
+            <p class="lineend small">Shipping within Canada is included.<font class="fr">&nbsp;&#92;&nbsp;L'expédition au Canada est incluse.</font></p>
 
           </div>
 
@@ -142,7 +142,7 @@
             </select>
 
             <input type="hidden" name="currency_code" value="CAD">
-            <button type="submit" name="submit" alt="White Tiger [12&nbsp;&times;&nbsp;8] (Gicl&eacute;e)">Pre-order<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;-commander</font></button>
+            <button type="submit" name="submit" alt="White Tiger [12&nbsp;&times;&nbsp;8] (Giclée)">Pre-order<font class="fr">&nbsp;&#92;&nbsp;Pré-commander</font></button>
 
           </form>
 
@@ -152,19 +152,19 @@
             <input type="hidden" name="hosted_button_id" value="G6WMNEAJSVNV4">
 
             <input type="hidden" name="currency_code" value="USD">
-            <button type="submit" name="submit" alt="White Tiger [12&nbsp;&times;&nbsp;8] (Gicl&eacute;e)">Pre-order</button>
+            <button type="submit" name="submit" alt="White Tiger [12&nbsp;&times;&nbsp;8] (Giclée)">Pre-order</button>
 
           </form>
 
-          <p class="linebreak small"><font class="paypal-ca">Select the <u>International</u> option for shipping outside Canada.<font class="fr">&nbsp;&#92;&nbsp;Veuillez s&eacute;lectionner l'option <u>Internationale</u> pour l'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada.</font><sup>&nbsp;[<a class="button" onclick="fn();" title="Terms of Purchase">1</a>]</sup></font></p>
+          <p class="linebreak small"><font class="paypal-ca">Select the <u>International</u> option for shipping outside Canada.<font class="fr">&nbsp;&#92;&nbsp;Veuillez sélectionner l'option <u>Internationale</u> pour l'expédition à l'extérieur du Canada.</font><sup>&nbsp;[<a class="button" onclick="fn();" title="Terms of Purchase">1</a>]</sup></font></p>
 
         </div>
 
         <div class="clear-bottom">
-          <h5><a class="overscore" onclick="toggle_0201_1121();">Limited Edition Gicl&eacute;e</a><font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
+          <h5><a class="overscore" onclick="toggle_0201_1121();">Limited Edition Giclée</a><font class="fr">&nbsp;&#92;&nbsp;en édition limitée</font></h5>
           <div class="clear" id="product-0201-1121">
             <p><font class="sku small">0201 1121</font></p>
-            <p>Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 25.</p>
+            <p>Edition of<font class="fr">&nbsp;&#92;&nbsp;Édition de</font> 25.</p>
 
           </div>
           <p>Dimension: 20&nbsp;&times;&nbsp;12 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
@@ -176,7 +176,7 @@
           <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">200</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">200</font></font></p>
 
           <div class="clear paypal-ca">
-            <p class="lineend small">Shipping within Canada is included.<font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition au Canada est incluse.</font></p>
+            <p class="lineend small">Shipping within Canada is included.<font class="fr">&nbsp;&#92;&nbsp;L'expédition au Canada est incluse.</font></p>
 
           </div>
 
@@ -197,7 +197,7 @@
             </select>
 
             <input type="hidden" name="currency_code" value="CAD">
-            <button type="submit" name="submit" alt="White Tiger [20&nbsp;&times;&nbsp;12] (Gicl&eacute;e)">Pre-order<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;-commander</font></button>
+            <button type="submit" name="submit" alt="White Tiger [20&nbsp;&times;&nbsp;12] (Giclée)">Pre-order<font class="fr">&nbsp;&#92;&nbsp;Pré-commander</font></button>
 
           </form>
 
@@ -207,18 +207,18 @@
             <input type="hidden" name="hosted_button_id" value="VLQZ85CRCW4DC">
 
             <input type="hidden" name="currency_code" value="USD">
-            <button type="submit" name="submit" alt="White Tiger [20&nbsp;&times;&nbsp;12] (Gicl&eacute;e)">Pre-order</button>
+            <button type="submit" name="submit" alt="White Tiger [20&nbsp;&times;&nbsp;12] (Giclée)">Pre-order</button>
 
           </form>
 
-          <p class="linebreak small"><font class="paypal-ca">Select the <u>International</u> option for shipping outside Canada.<font class="fr">&nbsp;&#92;&nbsp;Veuillez s&eacute;lectionner l'option <u>Internationale</u> pour l'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada.</font><sup>&nbsp;[<a class="button" onclick="fn();" title="Terms of Purchase">1</a>]</sup></font></p>
+          <p class="linebreak small"><font class="paypal-ca">Select the <u>International</u> option for shipping outside Canada.<font class="fr">&nbsp;&#92;&nbsp;Veuillez sélectionner l'option <u>Internationale</u> pour l'expédition à l'extérieur du Canada.</font><sup>&nbsp;[<a class="button" onclick="fn();" title="Terms of Purchase">1</a>]</sup></font></p>
 
         </div>
 
       </div>
 
       <div class="quote" id="footnotes">
-        <p class="small"><sup>1</sup> International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat &frasl; Terms of Purchase">Terms of Purchase</a>.<font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada est limit&eacute;e aux pays r&eacute;pertori&eacute;s comme disponibles pour l'exp&eacute;dition international dans les conditions d'achat de la boutique.</font></p>
+        <p class="small"><sup>1</sup> International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat terms of purchase.">Terms of Purchase</a>.<font class="fr">&nbsp;&#92;&nbsp;L'expédition à l'extérieur du Canada est limitée aux pays répertoriés comme disponibles pour l'expédition international dans les conditions d'achat de la boutique.</font></p>
 
       </div>
 
@@ -228,7 +228,7 @@
 
   <div class="clear">
     <div class="quote clear-bottom text-center">
-      <h2>Project Broadcast<font class="fr">&nbsp;&#92;&nbsp;Mises &agrave; jour du projet</font></h2>
+      <h2>Project Broadcast<font class="fr">&nbsp;&#92;&nbsp;Mises à jour du projet</font></h2>
     </div>
 
   </div>
@@ -262,7 +262,7 @@
   <div class="clear color">
     <section class="single">
       <div class="quote text-center">
-        <h4><font class="color text-quote">&ldquo;</font><font class="thin">The fight to save tigers is our collective responsibility. Human beings are the answer to saving tigers. You and I are the answer.</font><font class="color text-quote">&rdquo;</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;</font>&laquo;&nbsp;<font class="thin">La lutte pour sauver les tigres est notre responsabilit&eacute; &agrave; tous. Les &ecirc;tres humains sont la r&eacute;ponse pour sauvegarder les tigres. Toi et moi, nous sommes tous la r&eacute;ponse.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Singye Wangmo, Senior Forestry Officer at Royal Manas National Park in Bhutan, 2017</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><font class="thin">The fight to save tigers is our collective responsibility. Human beings are the answer to saving tigers. You and I are the answer.</font><font class="color text-quote">&rdquo;</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;</font>&laquo;&nbsp;<font class="thin">La lutte pour sauver les tigres est notre responsabilité à tous. Les étres humains sont la réponse pour sauvegarder les tigres. Toi et moi, nous sommes tous la réponse.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Singye Wangmo, Senior Forestry Officer at Royal Manas National Park in Bhutan, 2017</font></h4>
 
       </div>
     </section>
